--- a/Android/components/守护进程.md
+++ b/Android/components/守护进程.md
@@ -82,7 +82,7 @@
 
 ![](image/cat查看手机的内存阈值.png)
 
-　　注意这些数字的单位是 page，1 page = 4 kb。上面的六个数字对应的就是（MB）：72、90、108、126、144、180，这些数字也就是对应的内存阈值，内存阈值在不同的手机上不一样，一旦低于该值，Android 便开始按顺序关闭进程，因此 Android 开始结束优先级最低的空进程，即当可用内存小于 108 MB（46080*4/1024）。
+　　注意这些数字的单位是 page，1 page = 4 kb。上面的六个数字对应的就是（MB）：72、90、108、126、144、180，这些数字也就是对应的内存阈值，内存阈值在不同的手机上不一样，一旦低于该值，Android 便开始按顺序关闭进程，因此 Android 开始结束优先级最低的空进程，即当可用内存小于 180 MB（46080*4/1024）。
 
 　　如果内存不足了，先会将空进程全部杀光，如果内存还不足，就要杀后台进程。
 
@@ -120,7 +120,7 @@
 | SYSTEM_ADJ             | -16  | 系统进程                                                 |
 | NATIVE_ADJ             | -17  | 系统起的 Native 进程                                     |
 
-　　根据上面的 adj 值，系统会先进行回收的就是：oom_adj 越大，占用物理内存越多会被最先 kill 掉。所以对于进程如何保活也就是如何降低 oom_adj 的值，以及如何使得应用占的内存最少。
+　　根据上面的 oom_adj 值，系统会先进行回收的就是：oom_adj 越大，占用物理内存越多的进程。所以对于进程如何保活也就是如何降低 oom_adj 的值，以及如何使得应用占的内存最少。
 
 　　app 退到后台时，其所有的进程优先级都会降低。但是 UI 进程是降低最为明显的，因为它占用的内存资源最多，系统内存不足的时候肯定优先先杀这些占用内存高的进程来腾出资源。所以，为了尽量避免后台 UI 进程被杀，需要尽可能地释放一些不用地资源，尤其是图片、音视频之类的。
 
@@ -130,16 +130,16 @@
 
 　　守护进程的实现思想分为两方面：
 
-1. 保活。通过提高进程优先级，降低进程被杀死的概率。
+1. 保活。通过提高进程优先级，降低进程被杀死的概率。当前业界的 Andriod 进程保活手段主要分为 **黑**、**白**、**灰**三种。
 2. 拉起。进程被杀死后，进行拉起。
 
-　　当前业界的 Andriod 进程保活手段主要分为 **黑**、**白**、**灰**三种，守护进程的实现方法如下：
+　　守护进程的实现方法如下：
 
 * 黑色保活：不同的 app 进程，用广播相互唤醒（包括利用系统提供的广播进行唤醒）。
 * 白色保活：通过启动前台 Service 使得进程优先级提高到前台进程。
 * 灰色保活：利用系统的漏洞启动前台 Service。
 * 双进程守护：两个进程互相拉起。
-* JobService 轮询：定时检测拉起。
+* JobService 轮询：关闭后自动拉起。
 
 #### 2.1.1. 黑色保活
 
@@ -163,7 +163,7 @@
 
 　　优点：写法简单、处理方便。
 
-　　缺点：前台服务和通知绑定在一起，意味着开启服务要伴随一条通知再通知栏，用户有感知。
+　　缺点：前台服务和通知绑定在一起，意味着开启服务要伴随一条通知在通知栏，用户有感知。
 
 #### 2.1.3. 灰色保活
 
@@ -203,7 +203,7 @@ context.bindService(intent, serviceConnection, flag);
 
 　　优点：5.0 以后出现的 JobService 是官方推荐的方式，比较稳定。
 
-　　缺点：触发时机不够实时，JobService 的触发时机回事充电时，闲暇时等特殊时机或者时周期性运行。
+　　缺点：触发时机不够实时，JobService 的触发时机会是充电时，闲暇时等特殊时机或者时周期性运行。
 
 ### 2.2. 具体的守护方案
 
@@ -483,9 +483,11 @@ public class MainActivity extends AppCompatActivity {
 
 #### 2.2.2. 前台进程
 
-　　原理：对于 API level < 18：调用 startForeground(ID, new Notofication()) ，发送空的 Notification，图标则不会显示。
+　　原理：
 
-　　对于 API level >= 18：在需要提优先级的 service A 启动一个 InnerService，两个服务同时 startForeground，且绑定同样的 ID，Stop 掉 InnerService，这样通知栏图标即被移除。
+1. 对于 API level < 18：调用 startForeground(ID, new Notofication()) ，发送空的 Notification，图标则不会显示。
+
+2. 对于 API level >= 18：在需要提优先级的 service A 启动一个 InnerService，两个服务同时 startForeground，且绑定同样的 ID，Stop 掉 InnerService，这样通知栏图标即被移除。
 
 ##### 2.2.2.1. 代码实现
 
@@ -691,7 +693,7 @@ public class MainActivity extends AppCompatActivity {
 
 　　双进程守护的思想就是：两个进程共同运行，如果有其中一个进程被杀，那么另一个进程就会将被杀的进程重新拉起，相互保护，在一定的意义上，维持进程的不断运行。
 
-　　双进程守护的两个进程，一个进程用于应用所需的后台操作，且叫它本地进程，另一个进程只负责监听着本地进程的状态，再本地进程被杀的时候拉起，与此同时本地进程也在监听着这个进程，准备在它被杀时拉起，将这个进程称为远端进程。
+　　双进程守护的两个进程，一个进程用于应用所需的后台操作，且叫它本地进程，另一个进程只负责监听着本地进程的状态，在本地进程被杀的时候拉起，与此同时本地进程也在监听着这个进程，准备在它被杀时拉起，将这个进程称为远端进程。
 
 　　所以双进程守护的前提是，系统杀进程只能一个一个的去杀，如果一次性杀两个，这种方法也是不行的。
 
@@ -719,14 +721,14 @@ public class LocalService extends Service {
         startAndBindRemoteService();
         return super.onStartCommand(intent, flags, startId);
     }
-	// 启动并绑定服务
+		// 启动并绑定服务
     private void startAndBindRemoteService() {
         Log.d(TAG, "startAndBindRemoteService");
         Intent intent = new Intent(this, RemoteService.class);
         startService(intent);
         bindService(intent, new LocalServiceConnection(), Context.BIND_IMPORTANT);
     }
-	// 绑定的回调
+		// 绑定的回调
     private class LocalServiceConnection implements ServiceConnection {
         public final String TAG = LocalServiceConnection.class.getSimpleName();
 
@@ -792,7 +794,7 @@ public class RemoteService extends JobService {
         Log.d(TAG, "onDestroy");
         super.onDestroy();
     }
-
+		// 检查某个服务是否还存活
     public boolean isServiceWork(Context context, String serviceName) {
         if (TextUtils.isEmpty(serviceName)) {
             return false;
@@ -850,10 +852,12 @@ public class RemoteService extends JobService {
 
 ##### 2.2.6.3. 优化
 
-　　在双进程守护的方案上还可以根据其他的实现方案进行优化：
+　　在双进程守护的方案上还可以加上其他的实现方案进行优化：
 
 1. 将 LocalService 设置为前台进程，提供它的优先级，减少被杀死的可能性。
 2. 将 RemoteService 放在单独的一个线程，减少占用主程序的内存。
+
+　　优化后的双进程守护的方案在实际使用中是最常用的。
 
 #### 2.2.7. 其他
 
