--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -81,7 +81,7 @@
 6. Fragment 知识总结
 7. 《 年纪轻轻，就有了猫 》
 8. 绘画 4 幅
-9. 锻炼 14 天
+9. 锻炼 16 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
@@ -91,6 +91,7 @@
 16. Android 4.4.4 分包后找不到类的问题
 17. Retrofit
 18. 《 Android 开发艺术探索 》第 1 章
+19. 守护进程
 
 
 
