--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -104,9 +104,12 @@
    * Binder
    * Intent
    * IntentFilter
-   * 进程保活- 守护进程 
    * 优化
    * AsyncTask
+   * HandlerThread
+   * Messenger
+   * IdleHandler
+   * IntentService - Service 的知识里面有提到一些
    * 事件分发机制
    * View 绘制流程
    * Window、Activity、DecorView 以及 ViewRoot 之间的关系
@@ -115,6 +118,7 @@
    * 屏幕适配
    * 缓存机制
    * 多线程通信
+   * 进程保活- 守护进程  - 已完成
    * Fragment - 已完成
 2. 开源库
    * Glide
