--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -24,9 +24,10 @@
 4. Flutter 知识学习
 5. 插件化知识学习
 6. 组件化知识学习
-7. Python 知识学习
-8. 微信小程序知识学习
-9. 架构知识学习
+7. 热修复知识学习
+8. Python 知识学习
+9. 微信小程序知识学习
+10. 架构知识学习
 
 ### 3. 生活
 
@@ -47,10 +48,11 @@
 
 ### 影视
 
-1. 《爱情公寓》 2020 年 2 月
-2. 《两只老虎》 2020 年 2 月
-3. 《红星救援》2020 年 2 月
-4. 《狐妖小红娘》-尾生篇 2020 年 3 月
+1. 《 爱情公寓 》 2020 年 2 月
+2. 《 两只老虎 》 2020 年 2 月
+3. 《 红星救援 》2020 年 2 月
+4. 《 狐妖小红娘 》-尾生篇 2020 年 3 月
+5. 《 魔法公主 》
 
 
 
@@ -103,7 +105,7 @@
    * Handle、Message、Looper 
    * Binder
    * Intent
-   * IntentFilter
+   * IntentFilter 的匹配规则
    * 优化
    * AsyncTask
    * HandlerThread
@@ -127,6 +129,7 @@
    * Picasso
    * WebSocket
    * eventBus
+   * ButterKnife
    * RxAndroid
    * XWalkView
    * 插件化
