--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -94,6 +94,7 @@
 17. Retrofit
 18. 《 Android 开发艺术探索 》第 1 章
 19. 守护进程
+20. Handler
 
 
 
@@ -102,7 +103,7 @@
 1. Android
    * ContentProvider
    * JobService 、JobSheduler
-   * Handle、Message、Looper 
+   * Handle、Message、Looper  - 已完成
    * Binder
    * Intent
    * IntentFilter 的匹配规则
@@ -144,7 +145,7 @@
    * Socket
 4. Java
    * 线程
-   * threadLocal原理
+   * threadLocal原理 - 已完成
    * hashCode
    * arrayMap
    * treeMap
