--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -83,7 +83,7 @@
 6. Fragment 知识总结
 7. 《 年纪轻轻，就有了猫 》
 8. 绘画 4 幅
-9. 锻炼 16 天
+9. 锻炼 18 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
@@ -103,7 +103,6 @@
 1. Android
    * ContentProvider
    * JobService 、JobSheduler
-   * Handle、Message、Looper  - 已完成
    * Binder
    * Intent
    * IntentFilter 的匹配规则
@@ -120,7 +119,8 @@
    * AMS、WMS、PMS
    * 屏幕适配
    * 缓存机制
-   * 多线程通信
+   * 多进程通信
+   * Handle、Message、Looper  - 已完成
    * 进程保活- 守护进程  - 已完成
    * Fragment - 已完成
 2. 开源库
@@ -145,7 +145,6 @@
    * Socket
 4. Java
    * 线程
-   * threadLocal原理 - 已完成
    * hashCode
    * arrayMap
    * treeMap
@@ -154,6 +153,7 @@
    * ReentrantLock
    * Condition
    * 动态代理类 Proxy
+   * threadLocal原理 - 已完成
    * volatile - 数据从主内存直接获取 - 已完成
    * synchronized - 同步 - 已完成
 5. 数据结构
