图解HTTP第2章，Rxjava知识

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -52,7 +52,7 @@
 2. 《 两只老虎 》 2020 年 2 月
 3. 《 红星救援 》2020 年 2 月
 4. 《 狐妖小红娘 》-尾生篇 2020 年 3 月
-5. 《 魔法公主 》
+5. 《 魔法公主 》202 年 3 月
 
 
 
@@ -82,13 +82,13 @@
 5. Android 中 Home 键的监听
 6. Fragment 知识总结
 7. 《 年纪轻轻，就有了猫 》
-8. 绘画 4 幅
-9. 锻炼 18 天
+8. 绘画 6 幅
+9. 锻炼 21 天
 10. 同步知识
 11. volatile 知识
 12. synchronized 知识
 13. 责任链模式
-14. 《 图解 HTTP 》第 1 章
+14. 《 图解 HTTP 》第 1 - 2章
 15. OkHttp
 16. Android 4.4.4 分包后找不到类的问题
 17. Retrofit
