--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -95,6 +95,7 @@
 18. 《 Android 开发艺术探索 》第 1 章
 19. 守护进程
 20. Handler
+21. RxJava
 
 
 
@@ -125,7 +126,6 @@
    * Fragment - 已完成
 2. 开源库
    * Glide
-   * RxJava
    * LRUCache
    * Picasso
    * WebSocket
@@ -135,6 +135,7 @@
    * XWalkView
    * 插件化
    * 热修复
+   * RxJava - 已完成
    * Retrofit 源码分析 - 已完成
    * OkHttp - 已完成
    * RabbitMQ - 已完成
