--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -97,6 +97,10 @@
 20. Handler
 21. RxJava
 
+### 2020 年 4 月
+
+1. 《 图解 HTTP》第 3 章
+
 
 
 ## 盘点需要做的事情（详细）
@@ -110,7 +114,7 @@
    * 优化
    * AsyncTask
    * HandlerThread
-   * Messenger
+   * Messenger - 多进程通信
    * IdleHandler
    * IntentService - Service 的知识里面有提到一些
    * 事件分发机制
