AsyncTask,Android开发艺术探索第二章

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -125,6 +125,9 @@
    * 屏幕适配
    * 缓存机制
    * 多进程通信
+   * ArrayDeque
+   * CopyOnWriteArrayList
+   * ConcurrentHashMap
    * Handle、Message、Looper  - 已完成
    * 进程保活- 守护进程  - 已完成
    * Fragment - 已完成
