--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -77,7 +77,7 @@
 
 1. implementation 与 api 的区别
 2. jar 与 aar 的区别
-3. 《 深入理解 Java 虚拟机 》第 10-13  、2-3章 本书完结
+3. 《 深入理解 Java 虚拟机 》第 10-13  、2-3 章 本书完结
 4. RabbitMQ 知识整理
 5. Android 中 Home 键的监听
 6. Fragment 知识总结
@@ -100,6 +100,7 @@
 ### 2020 年 4 月
 
 1. 《 图解 HTTP》第 3 章
+2. AsyncTask
 
 
 
@@ -112,7 +113,6 @@
    * Intent
    * IntentFilter 的匹配规则
    * 优化
-   * AsyncTask
    * HandlerThread
    * Messenger - 多进程通信
    * IdleHandler
@@ -128,6 +128,7 @@
    * ArrayDeque
    * CopyOnWriteArrayList
    * ConcurrentHashMap
+   * AsyncTask - 已完成
    * Handle、Message、Looper  - 已完成
    * 进程保活- 守护进程  - 已完成
    * Fragment - 已完成
