--- a/Android/adaptation/屏幕适配.md
+++ b/Android/adaptation/屏幕适配.md
@@ -9,3 +9,5 @@
 [Android 屏幕适配全攻略](https://blog.csdn.net/zhaokaiqiang1992/article/details/45419023)
 
 [一种较低成本的 Android 屏幕适配方式](https://zhuanlan.zhihu.com/p/37199709) - 今日头条适配方式
+
+[Android 目前最稳定和高效的UI适配方案](https://www.jianshu.com/p/a4b8e4c5d9b0)
