--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -104,13 +104,14 @@
 3. 《 Android 开发艺术探索 》第 2 章
 4. 运动 3 天
 5. 绘画 3 幅
+6. ContentProvider 源码分析
+7. 
 
 
 
 ## 盘点需要做的事情（详细）
 
 1. Android
-   * ContentProvider
    * JobService 、JobSheduler
    * Binder
    * Intent
@@ -131,6 +132,7 @@
    * ArrayDeque
    * CopyOnWriteArrayList
    * ConcurrentHashMap
+   * ContentProvider - 已完成
    * AsyncTask - 已完成
    * Handle、Message、Looper  - 已完成
    * 进程保活- 守护进程  - 已完成
