--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -132,6 +132,9 @@
    * ArrayDeque
    * CopyOnWriteArrayList
    * ConcurrentHashMap
+   * ArrayMap
+   * SpareArray
+   * nano ptotobufs
    * ContentProvider - 已完成
    * AsyncTask - 已完成
    * Handle、Message、Looper  - 已完成
