--- a/Android/optimize/内存溢出.md
+++ b/Android/optimize/内存溢出.md
@@ -1,8 +1,40 @@
-# 内存泄漏与内存溢出
+# 内存溢出
 
 ## Android 内存管理
 
 　　Android 应用层是由 java 开发的，Android 的 davlik 虚拟机与 jvm 也类似，只不过它是基于寄存器的。在 java 中，通过 new 为对象分配内存，所有对象在 java 堆内分配空间；而内存的释放是由垃圾收集器（GC）来回收的。Java 采用了有向图的原理。Java 将引用关系考虑为图的有向边，有向边从应用者指向引用对象。线程对象可以作为有向图的起始顶点，该图就是从起始顶点（GC roots）开始的一棵树，根顶点可以到达的对象都是有效对象，GC 不会回收这些对象。如果某个对象（连通子图）与这个根顶点不可达，那么认为这个对象不再被引用，可以被 GC 回收。
+
+## Android 的内存管理机制
+
+　　Android 系统的 Dalvik 虚拟机扮演了常规的内存垃圾自动回收的角色，Android 系统没有为内存提供交换区，它使用 paging 与 memory-mapping(mmaping) 的机制来管理内存。
+
+#### 共享内存
+
+　　Android 系统通过下面几种方式来实现共享内存：
+
+* Android 应用的进程都是从一个叫做 Zygote 的进程 fork 出来的。Zygote 进程在系统启动并且载入通用的 framewaork 的代码与资源之后开始启动。为了启动一个新的程序进程，系统会 fork Zygote 进程生成一个新的进程，然后在新的进程中加载并运行应用程序的代码。这使得大多数的 RAM pages 被用来分配给 framework 的代码，同时使得 RAM 资源能够在应用的所有进程之间进行共享。
+* 大多数 static 的数据被 mmapped 到一个进程中。这不仅仅使得同样的数据能够在进程间进行共享，而且使得它能够在需要的时候被 paged out。常见的 static 数据包括 Dalvik Code、app resources、so 文件等。
+* 大多数情况下，Android 通过显式的分配共享内存数据（例如 ashmem 或者 gralloc）来实现动态 RAM 区域能够在不同进程之间进行共享的机制。例如，Window Surface 在 App 与 Screen Compositor 之间使用共享的内存，Cursor Buffers 在 Content Provider 与 Clients 之间共享内存。
+
+#### 分配与回收内存
+
+* 每一个进程的 Dalvik heap 都反映了使用内存的占用范围。这就是通常逻辑意义上提到的 Davlik Heap Size，它可以随着需要进行增长，但是增长行为会有一个系统为它设置的上限。
+* 逻辑上讲的 Heap Size 和实际物理意义上使用的内存大小是不对等的，Proportional Set Size(PSS)记录了应用程序自身占用以及和其他进程进行共享的内存。
+* Android 系统并不会对 Heap 中空闲内存区域做碎片整理。系统仅仅在新的内存分配之前判断 Heap 的尾端剩余空间是否足够，如果空间不够会触发 gc 操作，从而腾出更多空闲的内存空间。在 Android 的高级系统版本里面针对 Heap 空间有一个 Generational Heap Memory 的模型，最近分配的对象会存放在 Young Generation 区域，当这个对象在这个区域停留的时间达到一定程度，它会被移动到 Old Generation，最后累积一定时间再移动到 Permanent Generation 区域。系统会根据内存中不同的内存数据类型分别执行不同的 gc 操作。例如，刚分配到 Young Generation 区域的对象通常更容易被销毁回收，同时在 Young Generation 区域的 gc 操作速度会比 Old Generation 区域的 gc 操作速度更快。
+
+　　每个 Generation 的内存区域都有固定的大小，随着新的对象陆续被分配到此区域，当这些对象总的大小快达到这一级别内存区域的阈值时，会触发 GC 的操作，以便腾出空间来存放其他新的对象。
+
+　　通常情况下，GC 发生的时候，所有的线程都是会被暂停的。执行 GC 所占用的时间和它发生在哪一个 Generation 也有关系，Young Generation 中的每次 GC 操作时间是最短的，Old Generation 其次，Permanent Generation 最长。执行时间的长短也和当前 Generation 中的对象数量有关。
+
+#### 限制应用的内存
+
+* 为了整个 Android 系统的内存控制需要，Android 系统为每一个应用程序都设置了一个硬性的 Dalvik Heap Size 最大限制阈值，这个阈值在不同的设备上会因为 RAM 大小不同而各有差异。如果应用占用内存空间已经接近这个阈值，此时再尝试分配内存的话，很容易引起 OutOfMemoryError 的错误。
+* ActivityManager.getMemoryClass() 可以用来查询当前应用的 Heap Size 阈值，这个方法会返回一个整数，表明应用的 Heap Size 阈值是多少 Mb(megabates)。
+
+#### 应用切换操作
+
+* Android 系统并不会在用户切换应用的时候做交换内存的操作。Android 会把那些不包含 Foreground 组件的应用进程放到 LRU Cache 中。例如，当用户开始开启了一个应用，系统会为它创建一个进程，但是当用户离开这个应用，此进程并不会立即被销毁，而是会被放到系统的 Cache 当中，如果用户后台再切换回到这个应用，此进程就能够被马上完整的恢复。从而实现应用的快速切换。
+* 如果应用中有一个被缓存的进程，这个进程会占用一定的内存空间，它会对系统的整体性能有影响。因此当系统开始进入 Low Memory 的状态时，它会由系统根据 LRU 的规则、应用的优先级、内存占用情况以及其他因素的影响综合评估之后决定是否被杀死。
 
 ## 内存溢出（out of memory）
 
@@ -56,89 +88,6 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 * Android 4.x 
 
   系统 Android 4.x 的系统废除了 external 的计数器，类似 bitmap 的分配改到 dalvik 的 java heap 中申请，只要 allocated + 新分配的内存 >= getMemoryClass() 的时候就会发生 OOM。
-
-
-
-## 内存泄漏（memeory leak）
-
-　　有些对象只有有限的生命周期，当它们的任务完成之后，它们将被垃圾回收器回收。如果在对象的生命周期本该结束的时候，这个对象还被一系列的引用，这就会导致内存泄漏。随着泄露的累积，app 将消耗完内存。
-
-　　比如，在 Activity.onDestory() 被调用之后，view 树以及相关的 bitmap 都应该被垃圾回收。如果一个正在运行的后台线程继续持有这个 Activity 的引用，那么相关的内存将不会被回收，这最终将导致 OutOfMemoryError 崩溃。
-
-　　memory leak 最终会导致 out of memory!
-
-### 内存泄漏的原因
-
-　　当向系统申请分配内存进行使用（new），可是使用完了以后却不归还（delete），结果申请到的那块内存自己也不能再访问（也许把地址弄丢了），而系统也不能再次将它分配给需要的程序。
-
-#### 1. 资源对象没关闭
-
-　　如 Cursor、File 等资源，它们会在 finalize 中关闭，但这样效率太低，容易造成内存泄漏；SQLiteCursor ，当数据量大的时候容易泄漏。
-
-#### 2. 使用 Adapter 时，没有使用系统缓存的 converView。
-
-#### 3. 没有及时调用 recycler() 释放不再使用的 bitmap。
-
-#### 4. 使用 application 的 Context 来替代 activity 相关的 context。
-
-　　不要让生命周期长于  Activity 的对象持有 Activity 的引用。
-
-#### 5. 广播注册没取消造成内存泄漏。
-
-#### 6. Handler 应该声明为静态对象，并在其内部类中保存一个对外部类的弱引用。
-
-## Android 的内存管理机制
-
-　　Android 系统的 Dalvik 虚拟机扮演了常规的内存垃圾自动回收的角色，Android 系统没有为内存提供交换区，它使用 paging 与 memory-mapping(mmaping) 的机制来管理内存。
-
-#### 共享内存
-
-　　Android 系统通过下面几种方式来实现共享内存：
-* Android 应用的进程都是从一个叫做 Zygote 的进程 fork 出来的。Zygote 进程在系统启动并且载入通用的 framewaork 的代码与资源之后开始启动。为了启动一个新的程序进程，系统会 fork Zygote 进程生成一个新的进程，然后在新的进程中加载并运行应用程序的代码。这使得大多数的 RAM pages 被用来分配给 framework 的代码，同时使得 RAM 资源能够在应用的所有进程之间进行共享。
-* 大多数 static 的数据被 mmapped 到一个进程中。这不仅仅使得同样的数据能够在进程间进行共享，而且使得它能够在需要的时候被 paged out。常见的 static 数据包括 Dalvik Code、app resources、so 文件等。
-* 大多数情况下，Android 通过显式的分配共享内存数据（例如 ashmem 或者 gralloc）来实现动态 RAM 区域能够在不同进程之间进行共享的机制。例如，Window Surface 在 App 与 Screen Compositor 之间使用共享的内存，Cursor Buffers 在 Content Provider 与 Clients 之间共享内存。
-
-#### 分配与回收内存
-* 每一个进程的 Dalvik heap 都反映了使用内存的占用范围。这就是通常逻辑意义上提到的 Davlik Heap Size，它可以随着需要进行增长，但是增长行为会有一个系统为它设置的上限。
-* 逻辑上讲的 Heap Size 和实际物理意义上使用的内存大小是不对等的，Proportional Set Size(PSS)记录了应用程序自身占用以及和其他进程进行共享的内存。
-* Android 系统并不会对 Heap 中空闲内存区域做碎片整理。系统仅仅在新的内存分配之前判断 Heap 的尾端剩余空间是否足够，如果空间不够会触发 gc 操作，从而腾出更多空闲的内存空间。在 Android 的高级系统版本里面针对 Heap 空间有一个 Generational Heap Memory 的模型，最近分配的对象会存放在 Young Generation 区域，当这个对象在这个区域停留的时间达到一定程度，它会被移动到 Old Generation，最后累积一定时间再移动到 Permanent Generation 区域。系统会根据内存中不同的内存数据类型分别执行不同的 gc 操作。例如，刚分配到 Young Generation 区域的对象通常更容易被销毁回收，同时在 Young Generation 区域的 gc 操作速度会比 Old Generation 区域的 gc 操作速度更快。
-
-　　每个 Generation 的内存区域都有固定的大小，随着新的对象陆续被分配到此区域，当这些对象总的大小快达到这一级别内存区域的阈值时，会触发 GC 的操作，以便腾出空间来存放其他新的对象。
-
-　　通常情况下，GC 发生的时候，所有的线程都是会被暂停的。执行 GC 所占用的时间和它发生在哪一个 Generation 也有关系，Young Generation 中的每次 GC 操作时间是最短的，Old Generation 其次，Permanent Generation 最长。执行时间的长短也和当前 Generation 中的对象数量有关。
-
-#### 限制应用的内存
-* 为了整个 Android 系统的内存控制需要，Android 系统为每一个应用程序都设置了一个硬性的 Dalvik Heap Size 最大限制阈值，这个阈值在不同的设备上会因为 RAM 大小不同而各有差异。如果应用占用内存空间已经接近这个阈值，此时再尝试分配内存的话，很容易引起 OutOfMemoryError 的错误。
-* ActivityManager.getMemoryClass() 可以用来查询当前应用的 Heap Size 阈值，这个方法会返回一个整数，表明应用的 Heap Size 阈值是多少 Mb(megabates)。
-
-#### 应用切换操作
-* Android 系统并不会在用户切换应用的时候做交换内存的操作。Android 会把那些不包含 Foreground 组件的应用进程放到 LRU Cache 中。例如，当用户开始开启了一个应用，系统会为它创建一个进程，但是当用户离开这个应用，此进程并不会立即被销毁，而是会被放到系统的 Cache 当中，如果用户后台再切换回到这个应用，此进程就能够被马上完整的恢复。从而实现应用的快速切换。
-* 如果应用中有一个被缓存的进程，这个进程会占用一定的内存空间，它会对系统的整体性能有影响。因此当系统开始进入 Low Memory 的状态时，它会由系统根据 LRU 的规则、应用的优先级、内存占用情况以及其他因素的影响综合评估之后决定是否被杀死。
-
-## 内存泄漏的八种可能
-
-　　Java 是垃圾回收语言的一种，其优点是开发者无需特意管理内存分配，降低了应用由于局部故障（segmentation fault）导致奔溃，同时防止未释放的内存把堆栈（heap）挤爆的可能，所以写出来的代码更为安全。
-
-　　不幸的是，在 Java 中仍存在很多容易导致内存泄漏的逻辑可能（logincal leak）。如果不小心，Android 应用很容易浪费掉未释放的内存，最终导致内存用光的错误排除（out-of_memory，OOM）。
-
-　　一般内存泄漏（traditional memory leak）的原因是：忘记释放分配的内存导致的（Cursor 忘记关闭等）。逻辑内存泄漏（logic memory leak）的原因是：当应用不再需要这个对象，但仍未释放该对象的所有引用。
-
-　　如果持有对象的强引用，垃圾回收器是无法载内存中回收这个对象。
-
-　　在 Android 开发中，最容易引起的内存泄漏问题的是 Context。比如 Activity 的 Context，就是包含大量的内存引用，例如 View Hierarchies 和其他资源。一旦泄漏了 Context，也意味着泄漏它指向的所有对象。Android 机器内存有限，太多的内存泄漏容易导致 OOM。
-
-　　检测逻辑内存泄漏需要主观判断，特别是对象的生命周期并不清晰。幸运的是，Activity 有着明确的生命周期，很容易发现泄漏的原因。Activity.onDestory() 被视为 Activity 生命的结束，程序上来看，它应该被销毁了，或者 Android 系统需要回收这些内存（当内存不够时，Android 会回收看不见的 Activity）。如果这个方法执行完，在堆栈中仍存在持有该 Activity 的强引用，垃圾回收器就无法把它标记为已回收的内存，而目的却是要回收它。最终的结果就是 Activity 存活在它的生命周期之外。
-
-　　Activity 是重量级对象，应该让 Android 系统来处理它。然而，逻辑内存泄漏总是在不经意间发生。在 Android 中，导致潜在内存泄漏的陷阱不外乎两种：
-
-1. 全局进程（process-global）的 static 变量。这个无视应用的状态，持有 Activity 的强引用的变量。
-2. 活在 Activity 生命周期之外的线程。没有清空对 Activity 的强引用。
-
-### 1. Static Activities
-
-　　在类中定义了静态 Activity 变量，把当前运行的 Activity 实例赋值于这个静态变量。
-
-　　
 
 
 
