--- a/Android/optimize/内存溢出.md
+++ b/Android/optimize/内存溢出.md
@@ -2,9 +2,7 @@
 
 ## 1. 概述
 
-　　内存溢出就是要求分配的内存超出了系统能给的，系统不能满足需求，于是产生溢出。
-
-　　内存溢出是指当对象的内存占用已经超过分配内存的空间大小，这时未经处理的异常就会抛出。比如常见的内存溢出情况有：bitmap 过大，引用没释放，资源对象没关闭。
+　　内存溢出是指当对象的内存占用已经超过可分配内存的空间大小，系统不能满足需求，这时未经处理的异常就会抛出。比如常见的内存溢出情况有：bitmap 过大，引用没释放，资源对象没关闭。
 
 ```xml
 java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with 7700010 free bytes and 180MB until OOM
@@ -18,107 +16,114 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
 ## 2. 内存溢出的原因
 
-#### 1. 内存泄漏导致
+### 2.1. 内存泄漏导致
 
-　　由于程序的失误，长期保持某些资源（如 Context） 的引用，垃圾回收器就无法回收它，当然该对象占用的内存就无法被使用，这就造成内存泄漏。
+　　由于程序的失误，长期保持某些资源（如 Context） 的引用，垃圾回收器就无法回收它，该对象占用的内存也无法被使用，这就造成内存泄漏。
 
-　　Android 中常见就是 Activity 被引用在调用 finish 之后却没有释放，第二次打开 activity 又重新创建，这样的内存泄漏不断的发生，则会导致内存的溢出。
+　　Android 中常见就是 Activity 被引用在调用 onDestory 之后却没有释放，第二次打开 Activity 又重新创建，这样内存泄漏会不断的发生，最终导致内存溢出。
 
-　　Android 的每个应用程序都会使用一个专有的 Dalvik 虚拟机实例来运行，它是由 Zygote 服务进程孵化出来的，也就是说每个应用程序都是在属于自己的进程中运行的。Android 为不同类型的进程分配了不同的内存使用上限，如果程序在运行过程中出现了内存泄漏而造成应用进程使用的内存超过了这个上限，则会被系统视为内存泄漏，从而被 kill 掉，仅仅自己的进程被 kill 掉，而不会影响其他进程。
+　　Android 的每个应用程序都会使用一个专有的 Dalvik 虚拟机实例来运行，它是由 Zygote 服务进程孵化出来的，也就是说每个应用程序都是在属于自己的进程中运行的。Android 为不同类型的进程分配了不同的内存使用上限，如果程序在运行过程中出现了内存泄漏而造成应用进程使用的内存超过了这个上限，则会被系统视为内存溢出，从而被 kill 掉，但仅仅是自己的进程被 kill 掉，而不会影响其他进程。
 
-#### 2. 占用内存较多的对象
+### 2.2. 占用内存较多的对象
 
 　　保存了多个耗用内存过大的对象（如 Bitmap）或加载单个超大的图片，造成内存超出限制。
 
-
-
-　　使用 getMemoryClass() 的方法可以得到 Dalvik Heap 的阈值。
-
-### 查看内存使用情况
+## 3. 查看内存使用情况
 
 * 使用命令 `adb shell dumpsys meminfo -a 包名`查看内存详细占用情况。
 * 通过 Android Studio 的 Memory Monitor 查看内存中 Dalvik Heap 的实时变化。
 
-### 发生 OOM 的条件
+## 4. 发生 OOM 的条件
 
-　　关于 Native Heap、Dalvik Heap、Pss 等内存管理机制比较复杂，简单来说，通过不同的内存分配方式（malloc/mmap/JNIEnv/etc）对不同的对象（bitmap,etc）进行操作会因为 Android 系统版本的差异而产生不同的行为，对 Native Heap 、 Dalvik Heap 以及 OOM 的判断条件都会有所影响。在 2.x 的系统上，可以看到 Heap Size 的 total 值明显超过了通过 getMemoryClass() 获取到的阈值而不会发生 OOM 的情况，那么针对 2.x 与 4.x 的 Android 系统，到底是如何判断会发生 OOM 呢？
+　　关于 Native Heap、Dalvik Heap、Pss 等内存管理机制比较复杂，简单来说，通过不同的内存分配方式（malloc/mmap/JNIEnv/etc）对不同的对象（bitmap,etc）进行操作会因为 Android 系统版本的差异而产生不同的行为，对 Native Heap 、 Dalvik Heap 以及 OOM 的判断条件都会有所影响。
+
+　　使用 getMemoryClass() 的方法可以得到 Dalvik Heap 的阈值。
+
+　　在 2.x 的系统上，可以看到 Heap Size 的 total 值明显超过了通过 getMemoryClass() 获取到的阈值而不会发生 OOM 的情况，那么针对 2.x 与 4.x 的 Android 系统，到底是如何判断会发生 OOM 呢？
 
 * Android 2.x 系统
 
   GC LOG 中的 dalvik allocated + external allocated + 新分配的大小 >= getMemoryClass() 值的时候就会发生 OOM。
 
-  例如，假设有这么一段 Dalvik 输出的 GC LOG：GC_FOR_MALLOC free 2k,13% free 32586K/37455K,external 8989K/10356K,paused 20ms,那么 32586+8989+（新分配）=65550>64M时，就会发生 OOM。
+  例如，假设有这么一段 Dalvik 输出的 GC LOG：GC_FOR_MALLOC free 2k,13% free 32586K/37455K,external 8989K/10356K,paused 20ms,那么 32586+8989+（新分配）=65550>64M 时，就会发生 OOM。
 
 * Android 4.x 
 
   系统 Android 4.x 的系统废除了 external 的计数器，类似 bitmap 的分配改到 dalvik 的 java heap 中申请，只要 allocated + 新分配的内存 >= getMemoryClass() 的时候就会发生 OOM。
 
-
-
-## 3. 如何避免 OOM
+## 5. 如何避免 OOM
 
 　　可以从四个方面着手，首先是减少对象的内存占用，其次是内存对象的重复利用，然后是避免对象的内存泄漏，最后是内存使用策略优化。
 
-### 1. 减少对象的内存占用
+### 5.1. 减少对象的内存占用
 
 　　避免 OOM 的第一步就是要尽量减少新分配出来的对象占用内存的大小，尽量使用更加轻量的对象。
 
-##### 1.使用更加轻量的数据结构
+#### 5.1.1.使用更加轻量的数据结构
 
-　　例如，可以考虑使用 ArrayMap/SparseArray 而不是 HashMap 等传统数据结构，HashMap 相比起 Android 系统专门为移动操作系统编写的 ArrayMap 容器，大多数情况下，都显示效率低下，更占内存。通常的 HashMap 的实现方式更加消耗内存，因为它需要一个额外的实例对象来记录 Mapping 操作。另外，SparseArray 更加高效在于它们避免了对 key 与 value 的 autobox 自动装箱，并且避免了装箱后的解箱。
+　　例如，可以考虑使用 ArrayMap/SparseArray 而不是 HashMap 等传统数据结构，HashMap 相比起 Android 系统专门为移动操作系统编写的 ArrayMap 容器，大多数情况下，都显示效率低下，更占内存。
 
-##### 2.避免在 Android 里面使用 Enum
+　　通常的 HashMap 的实现方式更加消耗内存，因为它需要一个额外的实例对象来记录 Mapping 操作。另外，SparseArray 更加高效在于它们避免了对 key 与 value 的 autobox 自动装箱，并且避免了装箱后的解箱。
+
+#### 5.1.2. 避免在 Android 里面使用 Enum
 
 　　Android 官方培训课程提到过 “Enum often require more than twice as much memory as static constants.You should strictly avoid using enums on Android.”，所以请避免在 Android 里面使用到枚举。
 
-##### 3.减少 Bitmap 对象的内存占用
+#### 5.1.3. 减少 Bitmap 对象的内存占用
 
 　　Bitmap 是一个极容易消耗内存的大胖子，减少创建出来的 Bitmap 的内存占用是很重要的，通常来说有下面 2 个措施：
 * inSampleSize：缩放比例，在把图片载入内存之前，需要先计算出一个合适的缩放比例，避免不必要的大图载入。
 * decode format：解码格式，选择 ARGB_8888/RBG_565/ARGB_4444/ALPHA_8，存在很大差异。
 
-##### 4.使用更小的图片
+#### 5.1.4. 使用更小的图片
 
-　　在设计给资源图片的时候，需要特别留意这张图片是否存在可以压缩的空间，是否可以使用一张更小的图片。尽量使用更小的图片不仅仅可以减少内存的使用，还可以避免出现大量的 InflationException。假设有一张很大的图片被 XML 文件直接引用，很有可能在初始化视图的时候就会因为内存不足而发生 InflationException，这个问题的根本原因其实是发生了 OOM。
+　　在设计给资源图片的时候，需要特别留意这张图片是否存在可以压缩的空间，是否可以使用一张更小的图片。尽量使用更小的图片不仅仅可以减少内存的使用，还可以避免出现大量的 InflationException。
 
-### 2. 内存对象的重复利用
+　　假设有一张很大的图片被 XML 文件直接引用，很有可能在初始化视图的时候就会因为内存不足而发生 InflationException，这个问题的根本原因其实是发生了 OOM。
 
-　　大多数对象的复用，最终实施的方案都是利用对象池技术，要么是在编写代码的时候显式的在程序里面去创建对象池，然后处理好复用的实现逻辑，要么就是利用系统框架既有的某些复用特性达到减少对象的重复创建，从而减少内存的分配与回收。
+### 5.2. 内存对象的重复利用
 
-##### 1.复用系统自带资源
+　　大多数对象的复用，最终实施的方案都是利用对象池技术。要么是在编写代码的时候显式的在程序里面去创建对象池，然后处理好复用的实现逻辑，要么就是利用系统框架既有的某些复用特性达到减少对象的重复创建，从而减少内存的分配与回收。
 
-　　Android 系统本身内置了很多的资源，例如字符串/颜色/图片/动画/样式以及简单布局等等，这些资源都可以在应用程序中直接引用。这样做不仅仅可以减少应用程序的自身负重，减少 APK 的大小，另外还可以一定程度上减少内存的开销，复用性更好。但是也有必要留意 Android 系统的版本差异性，对那些不同系统版本上表现存在很大差异，不符合需求的情况，还是需要应用程序自身内置进去。
+#### 5.2.1. 复用系统自带资源
 
-##### 2.注意在 ListView/GridView 等出现大量重复子组件的视图里面对 ConvertView 的复用
+　　Android 系统本身内置了很多的资源，例如字符串 / 颜色 / 图片 / 动画 / 样式以及简单布局等等，这些资源都可以在应用程序中直接引用。这样做不仅仅可以减少应用程序的自身负重，减少 APK 的大小，另外还可以一定程度上减少内存的开销，复用性更好。但是也有必要留意 Android 系统的版本差异性，对那些不同系统版本上表现存在很大差异，不符合需求的情况，还是需要应用程序自身内置进去。
+
+#### 5.2.2. 注意在 ListView/GridView 等出现大量重复子组件的视图里面对 ConvertView 的复用
 
 　　使用 ListView 与 GirdView 注意组件的复用，减少组件的创建。
 
-##### 3.Bitmap 对象的复用
+#### 5.2.3. Bitmap 对象的复用
 
 1. 在 ListView 与 GirdViwe 等显示大量图片的空间里面需要使用 LRU 的机制来缓存处理好的 Bitmap。
 
-2. 利用 inBitmap 的高级特性提高 Android 系统在 Bitmap 分配和释放执行效率上的提升（3.0 以及 4.4 以后存在一些使用限制上的差异）。使用 inBitmap 属性可以告知 Bitmap 解码器去尝试使用已经存在的内存区域，新解码的 bitmap 会尝试去使用之前那张 bitmap 在 heap 中所占据的 pixel data 内存区域，而不是去问内存重新申请一块区域来存放 bitmap。利用这种特性，即使是上千张的图片，也只会仅仅只需要占用屏幕所能显示的图片数量的内存大小。
+2. 利用 inBitmap 的高级特性提高 Android 系统在 Bitmap 分配和释放执行效率上的提升（3.0 以及 4.4 以后存在一些使用限制上的差异）。
+
+   使用 inBitmap 属性可以告知 Bitmap 解码器去尝试使用已经存在的内存区域，新解码的 bitmap 会尝试去使用之前那张 bitmap 在 heap 中所占据的 pixel data 内存区域，而不是去问内存重新申请一块区域来存放 bitmap。利用这种特性，即使是上千张的图片，也只会仅仅只需要占用屏幕所能显示的图片数量的内存大小。
 
    使用 inBitmap 需要注意几个限制条件：
-
-   * 在 SDK 11 -> 18 之间，重用的 bitmap 大小必须是一致的，例如给 inBitmap 复制的图片大小为 100-100，那么新申请的 bitmap 必须也为 100-100 才能够被重用。从 SDK 19 开始，新申请的 bitmap 大小必须小于或等于已经赋值过的 bitmap 大小。
+   
+   * 在 SDK 11 -> 18 之间，重用的 bitmap 大小必须是一致的，例如给 inBitmap 复制的图片大小为 100-100，那么新申请的 bitmap 必须也为 100-100 才能够被重用。
+   
+     从 SDK 19 开始，新申请的 bitmap 大小必须小于或等于已经赋值过的 bitmap 大小。
+   
    * 新申请的 bitmap 与旧的 bitmap 必须有相同的解码格式，例如大家都是 8888 的，如果前面的 bitmap 是 8888，那么就不能支持 4444 与 565 格式的 bitmap 了。可以创建一个包含多种典型可重用 bitmap 的对象池，这样后续的 bitmap 创建都能够找到合适的 “ 模板 ” 去进行重用。
 
 　　在 2.x 的系统上，尽管 bitmap 是分配在 native 层，但是还是无法避免被计算到 OOM 的引用计数器里面。不少应用会通过反射 BitmapFactory.Options 里面的 inNativeAlloc 来达到扩大使用内存的目的，但是如果这么做，对系统整体会造成一定的负面影响，建议谨慎采纳。
 
-##### 4.避免在 onDraw 方法里面执行对象的创建
+#### 5.2.4. 避免在 onDraw 方法里面执行对象的创建
 
 　　类似 onDraw 等频繁调用的地方，一定需要注意避免在里面做创建对象的操作，因为它会迅速增加内存的使用，而且很容易引起频繁的 gc，甚至是内存抖动。
 
-##### 5.StringBuilder
+#### 5.2.5. StringBuilder
 
 　　在有些时候，代码中会需要使用到大量的字符串拼接的操作，这种时候有必要考虑使用 StringBuilder 来替代频繁的 “+” 。
 
-### 3. 避免对象的内存泄漏
+### 5.3. 避免对象的内存泄漏
 
 　　内存对象的泄漏，会导致一些不再使用的对象无法及时释放，这样一方面占用了宝贵的内存空间，很容易导致后续需要分配内存的时候，空闲空间不足而出现 OOM。显然，这还使得每级 Generation 的内存区域可用空间变小，gc 就会更容易被触发，容易出现内存抖动，从而引起性能问题。
 
-##### 1. 注意 Activity 的泄漏
+#### 5.3.1. 注意 Activity 的泄漏
 
 　　通常来说，Activity 的泄漏是内存泄漏里面最严重的问题，它占用的内存多，影响面广，需要特别注意以下两种情况导致的 Activity 泄漏：
 
@@ -132,39 +137,39 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
    内部类引起的泄漏不仅仅会发生在 Activity 上，其他任何内部类出现的地方，都需要特别留意！可以考虑尽量使用 static 类型的内部类，同时使用 WeakReference 的机制来避免因为相互引用而出现的泄漏。
 
-##### 2. 考虑使用 Application Context 而不是 Activity Context
+#### 5.3.2. 考虑使用 Application Context 而不是 Activity Context
 
-　　对于大部分非必须使用 Activity Context 的情况（Dialog 的 Context 就必须是 Activity COntext），都可以考虑使用 Application Context 而不是 Activity 的 Context，这样就避免不经意的 Activity 泄漏。
+　　对于大部分非必须使用 Activity Context 的情况（Dialog 的 Context 就必须是 Activity Context），都可以考虑使用 Application Context 而不是 Activity 的 Context，这样就避免不经意的 Activity 泄漏。
 
-##### 3. 注意临时 Bitmap 对象的及时回收
+#### 5.3.3. 注意临时 Bitmap 对象的及时回收
 
 　　虽然在大多数情况下，会对 Bitmap 增加缓存机制，但是在某些时候，部分 Bitmap 是需要及时回收的。例如临时创建的某个相对比较大的 bitmap 对象，在经过变换得到新的 bitmap 对象之后，应该尽快回收原始的 bitmap，这样能够更快释放原始 bitmap 所占用的空间。
 
 　　需要特别留意的是 Bitmap 类里面提供的 createBitmap() 方法，这个方法返回的 bitmap 有可能和 source bitmap 是同一个，在回收的时候，需要特别检查 source bitmap 与 return bitmap 的引用是否相同，只有在不同的时候，才能够执行 source bitmap 的 recycler 方法。
 
-##### 4. 注意监听器的注销
+#### 5.3.4. 注意监听器的注销
 
 　　在 Android 程序里面存在很多需要 register 和 unregister 的监听器，需要确保在何时的时候及时 unregister 那些监听器。
 
 　　自己动手 add 的 listener，需要记得及时 remove 这个 listener。
 
-##### 5. 注意缓存容器中的对象泄漏
+#### 5.3.5. 注意缓存容器中的对象泄漏
 
 　　有时候，为了提高对象的复用性把某些对象放到缓存容器中，可是如果这些对象没有及时从容器中清除，也是有可能导致内存泄漏的。
 
 　　例如，针对 2.3 的系统，如果把 drawable 添加到缓存容器，因为 drawable 与 View 的强引用，很容易导致 activity 发生泄漏，而从 4.0 开始，就不存在这个问题。解决这个问题，需要对 2.3 系统上的缓存 drawable 做特殊处理，处理引用解绑的问题，避免泄漏的情况。
 
-##### 6. 注意 WebView 的泄漏
+#### 5.3.6. 注意 WebView 的泄漏
 
 　　Android 中的 WebView 存在很大的兼容问题，不仅仅是 Android 系统版本的不同产生很大的差异，另外不同的厂商出货的 ROM 里面 WebView 也存在着很大的差异。更严重的标准的 WebView 存在内存泄漏的问题，所以通常根治这个问题的方法是为 WebView 开启另外一个进程，通过 AIDL 与主进程进行通信，WebView 所在的进程可以根据业务的需要选择合适的时机进行销毁，从而达到内存的完整释放。
 
-##### 7. 注意 Cursor 对象是否及时关闭
+#### 5.3.7. 注意 Cursor 对象是否及时关闭
 
 　　在程序中经常会进行查询数据库的操作，但时常会存在不小心使用 Cursor 之后没有及时关闭的情况。这些 Cursor 的泄漏，反复多次出现的话会对内存管理产生很大的负面影响，需要谨记对 Cursor 对象的及时关闭。
 
-### 4. 内存使用策略优化
+### 5.4. 内存使用策略优化
 
-##### 1.谨慎使用 large heap
+#### 5.4.1. 谨慎使用 large heap
 
 　　Android 设备根据硬件与软件的设置差异而存在不同大小的内存空间，它们为应用程序设置了不同大小的 Heap 限制阈值。
 
@@ -178,16 +183,16 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
 　　另外，large heap 并不一定能够获取到更大的 heap，在某些有严格限制的机器上，large heap 的大小和通常的 large size 是一样的。因此即使申请了 large heap，还是应该通过执行 getMemoryClass() 来检查实际获取到的 heap 大小。
 
-##### 2.综合考虑设备内存阈值与其他因素设计合适的缓存大小
+#### 5.4.2. 综合考虑设备内存阈值与其他因素设计合适的缓存大小
 
 　　例如，在设计 ListView 或者 GridView 的 Bitmap LRU 缓存的时候，需要考虑的点有：
 * 应用程序剩下了多少可用的内存空间？
-* 有多少图片会被一次呈现倒屏幕上？有多少图片需要事先缓存好以便快速滑动时能立即显示到屏幕？
+* 有多少图片会被一次呈现到屏幕上？有多少图片需要事先缓存好以便快速滑动时能立即显示到屏幕？
 * 设备的屏幕大小与密度是多少？一个 xhdpi 的设备会比 hdpi 需要一个更大的 Cache 来 hold 住同样数量的图片。
 * 不同的页面针对 Bitmap 的设计的尺寸与配置是什么，大概会花费多少内存？
 * 页面图片被访问的频率？是否存在其中的一部分比其他的图片具有更高的访问频繁？如果是，也许想要保存那些最常访问的到内存中，或者为不同组别的位图（按访问频率分组）设置多个 LruCache 容器。
 
-##### 3. onLowMemory() 与 onTrimMemory()
+#### 5.4.3. onLowMemory() 与 onTrimMemory()
 
 　　Android 用户可以随意在不同的应用之间进行快速切换。
 
@@ -217,7 +222,7 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
   * **TRIM_MEMORY_BACKGROUND：**系统正运行于低内存状态并且进程正处于 LRU 缓存名单中最不容易杀掉的位置。
 
-    尽管应用进程并不是处于被杀掉的高危险状态，系统可能已经开始杀掉 LRU 缓存中的其他进程了。应该释放那些容易恢复的资源，以便于进程可以保留下来，这样当用户会退到你的应用的时候才能够迅速恢复。
+    尽管应用进程并不是处于被杀掉的高危险状态，系统可能已经开始杀掉 LRU 缓存中的其他进程了。应该释放那些容易恢复的资源，以便于进程可以保留下来，这样当用户回退到应用的时候才能够迅速恢复。
 
   * **TRIM_MEMORY_MODERATE**：系统正运行于低内存状态，并且进程已经接近 LRU 名单的中部位置。如果系统开始变得更加内存紧张，进程是有可能被杀死的。
 
@@ -227,53 +232,53 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
 　　因为 onTrimMemory() 的回调是在 API 14 才被加进来的，对于老的版本，可以使用 onLowMemory() 回调来进行兼容。onLowMemory 相当于 TRIM_MEMORY_COMPLETE。
 
-　　请注意：当系统开始清除 LRU 缓存中的进程时，虽然它首先按照 LRU 的顺序来执行操作，但是它同样会考虑进程的内存使用量以及其他因素。占用越少的进程越容易被留下来。
+　　请注意：当系统开始清除 LRU 缓存中的进程时，虽然它首先按照 LRU 的顺序来执行操作，但是它同样会考虑进程的内存使用量以及其他因素。占用内存越少的进程越容易被留下来。
 
-##### 4.资源文件需要选择合适的文件夹进行存放
+#### 5.4.4. 资源文件需要选择合适的文件夹进行存放
 
 　　hdpi/xhdpi/xxhdpi 等等不同 dpi 的文件夹下的图片在不同的设备上会经过 scale 的处理。
 
-　　例如只在 hdpi 的目录下放置了一张 100x100 的图片，那么根据换算关系，xxhdpi 的手机去引用那张图片就会被拉伸到 200x200。需要注意到在这种情况下。内存占用是会显著提高的。对于不希望被拉伸的图片，需要放到 assets 或者 nodpi 的目录下。
+　　例如只在 hdpi 的目录下放置了一张 100x100 的图片，那么根据换算关系，xxhdpi 的手机去引用那张图片就会被拉伸到 200x200。需要注意到在这种情况下，内存占用是会显著提高的。对于不希望被拉伸的图片，需要放到 assets 或者 nodpi 的目录下。
 
-##### 5.Try catch 某些大内存分配的操作
+#### 5.4.5. Try catch 某些大内存分配的操作
 
 　　在某些情况下，需要实现评估那些可能发生 OOM 的代码，对于这些可能发生 OOM 的代码，加入 catch 机制，可以考虑在 catch 里面尝试一次降级的内存分配操作，例如 decode bitmap 的时候，catch 到 OOM，可以尝试把采样比例再增加一倍之后，再次尝试 decode。
 
-##### 6.谨慎使用 static 对象
+#### 5.4.6. 谨慎使用 static 对象
 
 　　因为 static 的生命周期很长，和应用的进程保持一致，使用不当很可能导致对象泄漏，在 Android 中应该谨慎使用 static 对象。
 
-##### 7.特别留意单例对象中不合理的持有
+#### 5.4.7. 特别留意单例对象中不合理的持有
 
 　　虽然单例模式简单实用，提供了很多便利性，但是因为单例的生命周期和应用保持一致，使用不合理很容易出现持有对象的泄漏。
 
-##### 8.珍惜 Services 资源
+#### 5.4.8. 珍惜 Services 资源
 
 　　如果应用需要在后台使用 Service，除非它被触发并执行一个任务，否则其他时候 Service 都应该是停止状态。
 
 　　另外需要注意当这个 service 完成任务之后因为停止 Service 失败而引起的内存泄漏。
 
-　　当启动一个 Service，系统会倾向为了保留这个 Service 而一直保留 Service 所在的进程。这使得进程运行代价很高，因为系统没有办法把 Service 所占用的 RAM 控件腾出来让给其他组件，另外 Service 还不能被 Paged out。这减少了系统能够存放到 LRU 缓存当中的进程数量，它会影响应用之间的切换效率，甚至会导致系统内存使用不稳定，从而无法继续保持住所有目前正在运行的 service。
+　　当启动一个 Service，系统会倾向为了保留这个 Service 而一直保留 Service 所在的进程。这使得进程运行代价很高，因为系统没有办法把 Service 所占用的 RAM 控件腾出来让给其他组件，另外 Service 还不能被 Paged out。这就减少了系统能够存放到 LRU 缓存当中的进程数量，它会影响应用之间的切换效率，甚至会导致系统内存使用不稳定，从而无法继续保持住所有目前正在运行的 Service。
 
-　　建议使用 IntentService，它会在处理完交代给它的任务之后尽快结束自己，
+　　建议使用 IntentService，它会在处理完交代给它的任务之后尽快结束自己。
 
-##### 9.优化布局层次，减少内存消耗
+#### 5.4.9. 优化布局层次，减少内存消耗
 
 　　越扁平化的视图布局，占用的内存就越少，效率越高。
 
 　　需要尽量保证布局足够扁平化，当使用系统提供的 View 无法实现足够扁平化的时候考虑使用自定义 View 来达到目的。
 
-##### 10.谨慎使用 “ 抽象 ” 编程
+#### 5.4.10.谨慎使用 “ 抽象 ” 编程
 
 　　很多时候，开发者会使用抽象类作为 “ 好的编程实践 ”，因为抽象能够提升代码的灵活性与可维护性。
 
 　　然而，抽象会导致一个显著的额外内存开销：它们需要同等量的代码用于可执行，那些代码会被 mapping 到内存中，因此如果抽象没有显著的提升效率，应该尽量避免它们。
 
-##### 11.使用 nano protobufs 序列化数据
+#### 5.4.11. 使用 nano protobufs 序列化数据
 
-　　Protocal buffers 是由 Google 为序列化结构数据而设计的，一种语言无关，平台无关，具有良好的扩展性。类似 XML，却比 XML 更加轻量、快速、简单。如果需要为数据实现序列化与协议化，建议使用 nano ptotobufs。
+　　Protocal buffers 是由 Google 为序列化结构数据而设计的，一种语言无关，平台无关，具有良好的扩展性。类似 XML，却比 XML 更加轻量、快速、简单。如果需要为数据实现序列化与协议化，建议使用 nano protobufs。
 
-##### 12.谨慎使用依赖注入框架
+#### 5.4.12. 谨慎使用依赖注入框架
 
 　　使用类似 Guice 或者 RoboGuice 等框架注入代码，在某种程度上可以简化代码。
 
@@ -281,7 +286,7 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
 　　除非真的很有必要，建议谨慎使用这种技术。
 
-##### 13.谨慎使用多进程
+#### 5.4.13. 谨慎使用多进程
 
 　　使用多进程可以把应用中的部分组件运行在单独的进程中，这样可以扩大应用的内存占用范围，但是这个技术必须谨慎使用，绝大数应用都不应该贸然使用多进程，一方面是因为使用多进程会使得代码逻辑更加复杂，另外如果使用不当，它可能反而会导致显著增加内存。
 
@@ -289,13 +294,13 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
 　　一个典型的例子是创建一个可以长时间后台播放的 Music Player。如果整个应用都运行在一个进程中，当后台播放的时候，前台的那些 UI 资源也没有办法得到释放。类似这种的应用可以切分成 2 个进程：一个用来操作 UI，另外一个给后台的 Service。
 
-##### 14.使用 ProGuard 来剔除不需要的代码
+#### 5.4.14. 使用 ProGuard 来剔除不需要的代码
 
 　　ProGuard 能够通过移除不需要的代码、重命名类、域与方法等等，对代码进行压缩、优化与混淆。
 
 　　使用 Proguard 可以使得代码更加紧凑，这样能够减少 mapping 代码所需要的内存空间。
 
-##### 15.谨慎使用第三方 libraries
+#### 5.4.15. 谨慎使用第三方 libraries
 
 　　很多开源的 library 代码都不是为移动网络环境而编写的，如果运用在移动设备上，并不一定适合。即使是针对 Android 而设计的 library，也需要特别谨慎，特别是在不知道引入的 library 具体做了什么事情的时候。
 
@@ -303,13 +308,13 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
 　　另外不要为了 1 个或者 2 个功能而导入整个 library，如果没有一个合适的库与需要相吻合，应该考虑自己去实现，而不是导入一个大而全的解决方案。
 
-##### 16.考虑不同的实现方式来优化内存占用
+#### 5.4.16. 考虑不同的实现方式来优化内存占用
 
 　　在某些情况下，设计的某个方案能够快速实现需求，但是这个方案却可能在内存占用上表现的效率不够好，就需要考虑其他实现方式来优化内存的占用。
 
-　　有时为了减少内存的占用，代码复杂度会有所增加，这就需要在优化内存占用与实现简易度之间进行权衡了。
+　　有时为了减少内存的占用，代码复杂度会有所增加，这就需要在优化内存占用与实现简易度之间进行权衡。
 
-## 其他
+## 6. 其他
 
 1. 设计风格很大程度上会影响到程序的内存与性能
 
@@ -325,16 +330,8 @@ java.lang.OutOfMemoryError：Failed to allocate a 395870124 byte allocation with
 
    OOM 是内存优化当中比较突出的一点，尽量减少 OOM 的概率对内存优化有着很大的意义。
 
-## 什么是内存抖动
-　　内存抖动是指在短时间内有大量的对象被创建或者被回收的现象。
 
-　　内存抖动出现原因主要是频繁在循环里创建对象，导致大量对象在短时间内被创建，由于新对象要占用内存空间而且很频繁，如果一次或者两次在循环里创建对象对内存影响不大，不会造成严重内存抖动，这样可以接受也不可避免，频繁的话就会内存抖动严重，内存抖动的影响是如果抖动很频繁，会导致垃圾回收机制频繁运行，短时间内产生大量对象，需要大量内存，而且还是频繁抖动，就可能会需要回收内存以用于产生对象，垃圾回收机制就自然会频繁运行了。所以频繁内存抖动会导致垃圾回收频繁运行。
-
-
-## 参考文章
-[Android 内存溢出和内存泄漏的区别](https://blog.csdn.net/u013435893/article/details/50608190)
-[Android内存优化之OOM](http://hukai.me/android-performance-oom/)
-
-[[译]Android内存泄漏的八种可能（上）](https://www.jianshu.com/p/ac00e370f83d)
-[[译]Android防止内存泄漏的八种方法（下）](https://www.jianshu.com/p/c5ac51d804fa)
+## 7. 参考文章
+1. [Android 内存溢出和内存泄漏的区别](https://blog.csdn.net/u013435893/article/details/50608190)
+2. [Android内存优化之OOM](http://hukai.me/android-performance-oom/)
 
