--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -107,7 +107,7 @@
 6. ContentProvider 源码分析
 7. AMS 知识
 8. 内存泄漏与内存溢出
-9. 
+9. IntentFilter 匹配规则
 
 
 
@@ -117,7 +117,6 @@
    * JobService 、JobSheduler
    * Binder
    * Intent
-   * IntentFilter 的匹配规则
    * 优化
    * HandlerThread
    * Messenger - 多进程通信
@@ -137,6 +136,7 @@
    * ArrayMap
    * SpareArray
    * nano ptotobufs
+   * IntentFilter 的匹配规则 - 已完成
    * ContentProvider - 已完成
    * AsyncTask - 已完成
    * Handle、Message、Looper  - 已完成
@@ -187,9 +187,23 @@
 ## 后续
 
 1. Android Dex 分包 https://www.jianshu.com/p/e96f345e822f
+
 2. Okio
+
 3. Flutter 与 RN
+
 4. SurfaceView 
+
 5. 《 TCP / IP 详解卷一 》
+
 6. 《 HTTP 权威指南 》
+
 7. Java method 类
+
+8. 《深入理解 Android 卷 II - 卷 III》
+
+9. WindowManager
+
+   [Android解析WindowManager（一）WindowManager体系](https://blog.csdn.net/itachi85/article/details/77888668)
+
+   
