--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -102,12 +102,14 @@
 1. 《 图解 HTTP》第 3 章
 2. AsyncTask
 3. 《 Android 开发艺术探索 》第 2 章
-4. 运动 10 天
-5. 绘画 6 幅
+4. 运动 16 天
+5. 绘画 7 幅
 6. ContentProvider 源码分析
 7. AMS 知识
 8. 内存泄漏与内存溢出
 9. IntentFilter 匹配规则
+10. WMS 知识
+11. 优化
 
 
 
@@ -117,7 +119,6 @@
    * JobService 、JobSheduler
    * Binder
    * Intent
-   * 优化
    * HandlerThread
    * Messenger - 多进程通信
    * IdleHandler
@@ -126,7 +127,7 @@
    * View 绘制流程
    * Window、Activity、DecorView 以及 ViewRoot 之间的关系
    * AIDL
-   * AMS、WMS、PMS
+   * PMS
    * 屏幕适配
    * 缓存机制
    * 多进程通信
@@ -136,6 +137,9 @@
    * ArrayMap
    * SpareArray
    * nano ptotobufs
+   * WMS - 已完成
+   * AMS - 已完成
+   * 优化 - 已完成
    * IntentFilter 的匹配规则 - 已完成
    * ContentProvider - 已完成
    * AsyncTask - 已完成
