--- a/Android/view/事件分发机制.md
+++ b/Android/view/事件分发机制.md
@@ -6,8 +6,7 @@
 
 
 ## 参考文章
-[Android事件分发机制完全解析，带你从源码的角度彻底理解(上)](https://blog.csdn.net/guolin_blog/article/details/9097463)
-
-[Android ViewGroup事件分发机制](https://blog.csdn.net/lmj623565791/article/details/39102591)
-
-[面试：讲讲 Android 的事件分发机制](https://www.jianshu.com/p/d3758eef1f72)
+1. [Android事件分发机制完全解析，带你从源码的角度彻底理解(上)](https://blog.csdn.net/guolin_blog/article/details/9097463)
+2. [Android事件分发机制完全解析，带你从源码的角度彻底理解(下)](https://blog.csdn.net/sinyu890807/article/details/9153747)
+3. [Android ViewGroup事件分发机制](https://blog.csdn.net/lmj623565791/article/details/39102591)
+4. [面试：讲讲 Android 的事件分发机制](https://www.jianshu.com/p/d3758eef1f72)
