--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -210,4 +210,6 @@
 
    [Android解析WindowManager（一）WindowManager体系](https://blog.csdn.net/itachi85/article/details/77888668)
 
-   
+10. DiskLruCache
+
+    [Android DiskLruCache完全解析，硬盘缓存的最佳方案](https://blog.csdn.net/guolin_blog/article/details/28863651)
