--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -102,7 +102,7 @@
 1. 《 图解 HTTP》第 3 章
 2. AsyncTask
 3. 《 Android 开发艺术探索 》第 2 章
-4. 运动 16 天
+4. 运动 20 天
 5. 绘画 7 幅
 6. ContentProvider 源码分析
 7. AMS 知识
@@ -110,6 +110,7 @@
 9. IntentFilter 匹配规则
 10. WMS 知识
 11. 优化
+12. PMS 启动解析
 
 
 
@@ -213,3 +214,5 @@
 10. DiskLruCache
 
     [Android DiskLruCache完全解析，硬盘缓存的最佳方案](https://blog.csdn.net/guolin_blog/article/details/28863651)
+    
+11. 类图、时序图的绘制
