--- a/Android/view/视图状态与重绘流程.md
+++ b/Android/view/视图状态与重绘流程.md
@@ -1,24 +1,185 @@
 # 视图状态与重绘流程
 
-## 视图状态
-　　视图状态的种类非常多，一共有十几种类型，不过多数情况下只会使用其中的集中，因此这里只去分析最常用的几种视图状态。
+## 1. 视图状态
+　　视图状态的种类非常多，一共有十几种类型，不过多数情况下只会使用其中的几种，因此这里只去分析最常用的几种视图状态。
 
-#### 1.enabled
-　　表示房钱视图是否可用。可以调用 setEnable() 方法来改变视图的可用状态，传入 true 表示可用，传入 false 表示不可用。它们之间最大却别在于，不可用的视图是无法响应 onTouch 事件的。
+### 1.1. enabled
 
-#### 2.focused
-　　表示当前视图是否获得到焦点。通常情况下有两种方法可以让视图获得焦点，即通过键盘的上下左右键切换视图，以及调用 requestFocus() 方法。而现在的 Android 手机几乎都没有键盘了，因此基本上只可以使用 requestFocus() 这个方法来让视图获得焦点了。而 requestFocus() 方法也不能保证一定可以让视图获得焦点，它会有一个布尔值的返回值，如果返回 true 说明获得焦点成功，返回 false 说明获得焦点失败。一般只有视图在 focusable 和 focusable in touch mode 同时成立的情况下才能成功获取焦点，比如说 EditText。
+　　表示当前视图是否可用。
 
-#### 3.window_focused
+　　可以调用 setEnable() 方法来改变视图的可用状态，传入 true 表示可用，传入 false 表示不可用。
+
+　　它们之间最大区别在于，不可用的视图是无法响应 onTouch 事件的。
+
+### 1.2. focused
+
+　　表示当前视图是否获得到焦点。
+
+　　通常情况下有两种方法可以让视图获得焦点，即通过键盘的上下左右键切换视图，以及调用 requestFocus() 方法。
+
+　　而现在的 Android 手机几乎都没有键盘了，因此基本上只可以使用 requestFocus() 这个方法来让视图获得焦点了。而 requestFocus() 方法也不能保证一定可以让视图获得焦点，它会有一个布尔值的返回值，如果返回 true 说明获得焦点成功，返回 false 说明获得焦点失败。
+
+　　一般只有视图在 focusable 和 focusable in touch mode 同时成立的情况下才能成功获取焦点，比如说 EditText。
+
+### 1.3. window_focused
+
 　　表示当前视图是否处于正在交互的窗口中，这个值由系统自动决定，应用程序不能进行改变。
 
-#### 4.selected
-　　表示当前视图是否处于选中状态。一个界面当中可以有多个视图处于选中状态，调用 setSelected() 方法能够改变视图的选中状态，传入 true 表示选中，传入 false 表示未选中。
+### 1.4. selected
 
-#### 5.pressed
-　　表示当前视图是否处于按下状态，可以调用 setPressed() 方法来对这一状态进行改变，传入 true 表示按下，传入 false 表示未按下。通常情况下这个状态都是由系统自动赋值的，但开发者也可以自己调用这个方法来进行改变。
+　　表示当前视图是否处于选中状态。
 
-### 重绘流程
+　　一个界面当中可以有多个视图处于选中状态，调用 setSelected() 方法能够改变视图的选中状态，传入 true 表示选中，传入 false 表示未选中。
+
+### 1.5. pressed
+
+　　表示当前视图是否处于按下状态。
+
+　　可以调用 setPressed() 方法来对这一状态进行改变，传入 true 表示按下，传入 false 表示未按下。
+
+　　通常情况下这个状态都是由系统自动赋值的，但开发者也可以自己调用这个方法来进行改变。
+
+## 2. 根据不同状态设置背景图片
+
+### 2.1. 使用
+
+　　可以在项目的 drawable 目录下创建一个 selector 文件，在这里配置每种状态下视图对应的背景图片。
+
+```xml
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+ 
+    <item android:drawable="@drawable/compose_pressed" android:state_pressed="true"></item>
+    <item android:drawable="@drawable/compose_pressed" android:state_focused="true"></item>
+    <item android:drawable="@drawable/compose_normal"></item>
+ 
+</selector>
+```
+
+　　将这个背景文件设置给控件的 android:background 属性后，控件在普通状态和按下状态的时候就会显示不同的背景图片。
+
+### 2.2 原理分析
+
+　　当手指按在视图上的时候，视图的状态就已经发生变化，此时视图的 pressed 状态是 true。每当视图的状态有发生改变的时候，就会回调 View 的 drawableStateChanged() 方法。
+
+#### 2.2.1. View#drawableStateChanged
+
+```java
+    /**
+     * This function is called whenever the state of the view changes in such
+     * a way that it impacts the state of drawables being shown.
+     * <p>
+     * If the View has a StateListAnimator, it will also be called to run necessary state
+     * change animations.
+     * <p>
+     * Be sure to call through to the superclass when overriding this function.
+     *
+     * @see Drawable#setState(int[])
+     */
+    @CallSuper
+    protected void drawableStateChanged() {
+        // 调用 getDrawableState 方法
+        final int[] state = getDrawableState();
+        boolean changed = false;
+
+        // 将 mBackground 设置给 bg
+        final Drawable bg = mBackground;
+        if (bg != null && bg.isStateful()) {
+            // 给背景设置了状态
+            changed |= bg.setState(state);
+        }
+
+        final Drawable hl = mDefaultFocusHighlight;
+        if (hl != null && hl.isStateful()) {
+            changed |= hl.setState(state);
+        }
+
+        final Drawable fg = mForegroundInfo != null ? mForegroundInfo.mDrawable : null;
+        if (fg != null && fg.isStateful()) {
+            changed |= fg.setState(state);
+        }
+
+        if (mScrollCache != null) {
+            final Drawable scrollBar = mScrollCache.scrollBar;
+            if (scrollBar != null && scrollBar.isStateful()) {
+                changed |= scrollBar.setState(state)
+                        && mScrollCache.state != ScrollabilityCache.OFF;
+            }
+        }
+
+        if (mStateListAnimator != null) {
+            mStateListAnimator.setState(state);
+        }
+
+        if (changed) {
+            invalidate();
+        }
+    }
+```
+
+　　首先会将 mBackground 赋值给 Drawable 对象 bg，而这个 mBackground 是什么？可以查看 setBackgroundResource() 方法中的代码。
+
+#### 2.2.2. View#setBackgroundResource
+
+```java
+   /**
+     * Set the background to a given resource. The resource should refer to
+     * a Drawable object or 0 to remove the background.
+     * @param resid The identifier of the resource.
+     *
+     * @attr ref android.R.styleable#View_background
+     */
+    @RemotableViewMethod
+    public void setBackgroundResource(@DrawableRes int resid) {
+        if (resid != 0 && resid == mBackgroundResource) {
+            return;
+        }
+
+        Drawable d = null;
+        if (resid != 0) {
+            d = mContext.getDrawable(resid);
+        }
+        setBackground(d);
+
+        mBackgroundResource = resid;
+    }
+```
+
+　　可以看到，在这里调用了 Resource 的 getDrawable() 方法将 resid 转换成了一个 Drawable 对象，然后调用了 setBackgroundDrawable() 方法并将这个 Drawable 对象传入，在 setBackgroundDrawable() 方法中会将传入的 Drawable 对象赋值给 mBackground 。
+
+　　而在布局文件中通过 android:background 属性指定的 selector 文件，效果等同于调用 setBackgroundResource() 方法。也就是说 drawableStateChanged() 方法中的  mBackground  对象其实就是指定的 selector 文件。
+
+　　接着在 drawableStateChanged() 方法中调用了 getDrawableState() 方法来获取视图状态。
+
+#### 2.2.3. View#getDrawableState
+
+```java
+    /**
+     * Return an array of resource IDs of the drawable states representing the
+     * current state of the view.
+     *
+     * @return The current drawable state
+     *
+     * @see Drawable#setState(int[])
+     * @see #drawableStateChanged()
+     * @see #onCreateDrawableState(int)
+     */
+    public final int[] getDrawableState() {
+        if ((mDrawableState != null) && ((mPrivateFlags & PFLAG_DRAWABLE_STATE_DIRTY) == 0)) {
+            return mDrawableState;
+        } else {
+            mDrawableState = onCreateDrawableState(0);
+            mPrivateFlags &= ~PFLAG_DRAWABLE_STATE_DIRTY;
+            return mDrawableState;
+        }
+    }
+```
+
+
+
+
+
+## 3. 重绘流程
+
 　　虽然视图会在 Activity 加载完成之后自动绘制到屏幕上，但是完全有理由在与 Activity 进行交互的时候要求动态更新视图，比如改变视图的状态以及显示或隐藏某个控件等。那在这个时候，之前绘制出的视图其实就已经过期了，此时就应该对视图进行重绘。
 
 　　调用视图的 setVisibility()、setEnabled()、setSelected() 等方法时都会导致视图重绘，而如果想要手动地强制让视图进行重绘，可以调用 invilidate() 方法来实现。当然了，setVisibiliry()、setEnable()、setSelected() 等方法的内部其实也是通过调用 invalidate() 方法来实现的。
