--- a/Android/view/视图状态与重绘流程.md
+++ b/Android/view/视图状态与重绘流程.md
@@ -174,9 +174,47 @@
     }
 ```
 
+　　在这里首先会判断当前视图的状态是否发生了改变，如果没有改变就直接返回当前的视图状态，如果发生了改变就调用 onCreateDrawableState() 方法来获取最新的视图状态。视图的所有状态会以一个整型数组的形式返回。
 
+#### 2.2.4. Drawable#setState
 
+　　在得到了视图状态的数组之后，就会调用 Drawable 的 setState() 方法来对状态进行更新，代码如下：
 
+```java
+    public boolean setState(@NonNull final int[] stateSet) {
+        if (!Arrays.equals(mStateSet, stateSet)) {
+            mStateSet = stateSet;
+            return onStateChange(stateSet);
+        }
+        return false;
+    }
+```
+
+　　这里会调用 Arrays.equals() 方法来判断视图状态的数组是否发生了变化，如果发生了变化则调用 onStateChange() 方法，否则就直接返回 false。
+
+　　但是会发现，Drawable 的 onStateChange() 方法中其实就只是简单返回了一个 false，并没有任何的逻辑处理，这主要是因为 background 对象是通过一个 selector 文件创建出来的，而通过这种文件创建出来的 Drawable 对象其实都是一个 StateDrawable 实例，因此这里调用的 onStateChange() 方法实际上调用的是 StateListDrawable 中的 onStateChange() 方法。
+
+#### 2.2.5. StateListDrawable#onStateChange
+
+```java
+    @Override
+    protected boolean onStateChange(int[] stateSet) {
+        final boolean changed = super.onStateChange(stateSet);
+
+        int idx = mStateListState.indexOfStateSet(stateSet);
+        if (DEBUG) android.util.Log.i(TAG, "onStateChange " + this + " states "
+                + Arrays.toString(stateSet) + " found " + idx);
+        if (idx < 0) {
+            idx = mStateListState.indexOfStateSet(StateSet.WILD_CARD);
+        }
+
+        return selectDrawable(idx) || changed;
+    }
+```
+
+　　首先会先调用 indexOfStateSet() 方法来找到当前视图状态所对应的 Drawable 资源下标，然后调用 selectDrawable(index) 方法并将下标传入，在这个方法中就会将视图的背景图设置为当前视图状态所对应的那张图片了。
+
+　　一般背景图的绘制是在 draw() 方法中完成的，而为什么 selectDrawable() 方法能够控制背景图的改变，这就需要研究视图重绘的流程。
 
 ## 3. 重绘流程
 
@@ -184,15 +222,18 @@
 
 　　调用视图的 setVisibility()、setEnabled()、setSelected() 等方法时都会导致视图重绘，而如果想要手动地强制让视图进行重绘，可以调用 invilidate() 方法来实现。当然了，setVisibiliry()、setEnable()、setSelected() 等方法的内部其实也是通过调用 invalidate() 方法来实现的。
 
-　　View 的源码中会有数个 invalidate() 方法的重载和一个 invalidateDrawable() 方法，这些方法都会调用到 invalidateInternal() 方法：
-```
+　　View 的源码中会有数个 invalidate() 方法的重载和一个 invalidateDrawable() 方法，这些方法都会调用到 invalidateInternal() 方法。
+
+### 3.1. View#invalidateInternal
+
+```java
     void invalidateInternal(int l, int t, int r, int b, boolean invalidateCache,
             boolean fullInvalidate) {
         if (mGhostView != null) {
             mGhostView.invalidate(true);
             return;
         }
-		//判断是否需要重绘
+				// 判断是否需要重绘
         if (skipInvalidate()) {
             return;
         }
@@ -219,7 +260,7 @@
             if (p != null && ai != null && l < r && t < b) {
                 final Rect damage = ai.mTmpInvalRect;
                 damage.set(l, t, r, b);
-				//重绘
+								// 重绘
                 p.invalidateChild(this, damage);
             }
 
@@ -238,10 +279,12 @@
         }
     }
 
+```
+　　在方法中首先会调用 skipInvalidate() 方法来判断当前 View 是否需要重绘。
 
-```
-　　在方法中首先会调用 skipInvalidate() 方法来判断当前 View 是否需要重绘：
-```
+### 3.2. View#skipInvalidate
+
+```java
     /**
      * Do not invalidate views which are not visible and which are not running an animation. They
      * will not get drawn and they should not set dirty flags as if they will be drawn
@@ -252,10 +295,15 @@
                         !((ViewGroup) mParent).isViewTransitioning(this));
     }
 ```
-　　如果 View 是不可见的并且没有动画，如果有父视图，不是父视图的过渡视图，则认为视图需要重绘。
+　　判断逻辑比较简单，如果 View 是不可见的并且没有动画，就认为不需要重绘了。
 
-　　接着看 invalidateInternal() 方法后面会调用 p.incalidateChild(this,damage) 方法，p 其实就是当前视图的父视图，所以调用的其实就是 ViewGroup 的 invalidateChild() 方法：
-```
+如果有父视图，不是父视图的过渡视图，则认为视图需要重绘。
+
+　　invalidateInternal() 方法之后会进行透明度的判断，并给  View 添加一些标记位，然后调用 ViewParent 对象 p 的 invalidateChild() 方法，这里的 ViewParent 其实就是当前视图的俯视图，因此会调用到 ViewGroup 的 invalidateChild() 方法中。
+
+### 3.3. ViewGroup#invalidateChild
+
+```java
     /**
      * Don't call or override this method. It is used for the implementation of
      * the view hierarchy.
@@ -361,8 +409,11 @@
         }
     }
 ```
-　　在 ViewGroup 的 invalidateChild() 方法中有一个 do-while 的循环，只要 parent 不为空就一直循环下去，在这个循环当中会不断地获取当前布局的父布局，并调用它的 invalidateChildInParent() 方法，在 ViewGroup 的 invalidateChildInParent() 方法中主要是来计算需要重绘的矩形区域。当循环到最外层的根布局后，就会调用 ViewRoot 的 invalidateChildInParent() 方法：
-```
+　　在 ViewGroup 的 invalidateChild() 方法中有一个 do-while 的循环，只要 ViewParent 不为空就一直循环下去，在这个循环当中会不断地获取当前布局的父布局，并调用它的 invalidateChildInParent() 方法，在 ViewGroup 的 invalidateChildInParent() 方法中主要是来计算需要重绘的矩形区域。当循环到最外层的根布局后，就会调用 ViewRoot 的 invalidateChildInParent() 方法。
+
+### 3.4. ViewRootImpl#invalidateChildInParent
+
+```java
 public final class ViewRootImpl implements ViewParent,
         View.AttachInfo.Callbacks, ThreadedRenderer.HardwareDrawCallbacks {
     @Override
@@ -397,8 +448,11 @@ public final class ViewRootImpl implements ViewParent,
     }
 }
 ```
-　　在 ViewRootImpl 的 invalidateChildInParent() 的方法中调用了 invalidate() 和 invalidateRectOnScreen(dirty) 方法，而这两个方法最终都会调用 scheduleTraversals() 方法：
-```
+　　在 ViewRootImpl 的 invalidateChildInParent() 的方法中调用了 invalidate() 和 invalidateRectOnScreen(dirty) 方法，而这两个方法最终都会调用 scheduleTraversals() 方法。
+
+### 3.5. ViewRootImpl#scheduleTraversals
+
+```java
     void scheduleTraversals() {
         if (!mTraversalScheduled) {
             mTraversalScheduled = true;
@@ -413,8 +467,11 @@ public final class ViewRootImpl implements ViewParent,
         }
     }
 ```
-　　scheduleTraversals() 方法主要就是发送消息。调用 mChoreographer.postCallback() 方法：
-```
+　　scheduleTraversals() 方法主要就是发送消息。调用 mChoreographer.postCallback() 方法。
+
+### 3.6. Choreographer#postCallback
+
+```java
 public final class Choreographer {
     public void postCallback(int callbackType, Runnable action, Object token) {
         postCallbackDelayed(callbackType, action, token, 0);
@@ -448,6 +505,7 @@ public final class Choreographer {
             if (dueTime <= now) {
                 scheduleFrameLocked(now);
             } else {
+              	// 发出 MSG_DO_SCHEDULE_CALLBACK 消息
                 Message msg = mHandler.obtainMessage(MSG_DO_SCHEDULE_CALLBACK, action);
                 msg.arg1 = callbackType;
                 msg.setAsynchronous(true);
@@ -457,8 +515,11 @@ public final class Choreographer {
     }
 }
 ```
-　　使用 mHandler.endMessageAtTime() 将消息发送给了主线程，等主线程的消息队列循环处理这条消息的时候就会调用 action 的 run() 方法，而 action 是 ViewRootImpl 的 mTraversalRunnable 成员：
-```
+　　使用 mHandler.endMessageAtTime() 将消息发送给了主线程，等主线程的消息队列循环处理这条消息的时候就会调用 action 的 run() 方法，而 action 是 ViewRootImpl 的 mTraversalRunnable 成员。
+
+### 3.7. TraversalRunnable 类
+
+```java
     final class TraversalRunnable implements Runnable {
         @Override
         public void run() {
@@ -467,8 +528,11 @@ public final class Choreographer {
     }
     final TraversalRunnable mTraversalRunnable = new TraversalRunnable();
 ```
-　　重绘的消息处理调用了 doTraversal() 方法：
-```
+　　重绘的消息处理调用了 doTraversal() 方法。
+
+### 3.8. ViewRootImpl#doTraversal
+
+```java
     void doTraversal() {
         if (mTraversalScheduled) {
             mTraversalScheduled = false;
@@ -489,8 +553,100 @@ public final class Choreographer {
 ```
 　　在 doTraversal() 方法中调用 performTraversals() 方法，performTraversals() 方法是视图绘制的入口，虽然经过了很多辗转的调用，但是可以确定的是，调用视图的 invalidate() 方法后确实会走到 performTraversals() 方法中，然后重新执行绘制流程。
 
+　　而对于前面的 selectDrawable() 方法查看源码研究一下是如何控制背景图的改变的。
 
+### 3.9. StateListDrawable#selectDrawable
 
-## 参考文章
-[Android视图状态及重绘流程分析，带你一步步深入了解View(三)](https://blog.csdn.net/guolin_blog/article/details/17045157)
+```java
+    public boolean selectDrawable(int index) {
+        if (index == mCurIndex) {
+            return false;
+        }
+
+        final long now = SystemClock.uptimeMillis();
+
+        if (DEBUG) android.util.Log.i(TAG, toString() + " from " + mCurIndex + " to " + index
+                + ": exit=" + mDrawableContainerState.mExitFadeDuration
+                + " enter=" + mDrawableContainerState.mEnterFadeDuration);
+
+        if (mDrawableContainerState.mExitFadeDuration > 0) {
+            if (mLastDrawable != null) {
+                mLastDrawable.setVisible(false, false);
+            }
+            if (mCurrDrawable != null) {
+                mLastDrawable = mCurrDrawable;
+                mLastIndex = mCurIndex;
+                mExitAnimationEnd = now + mDrawableContainerState.mExitFadeDuration;
+            } else {
+                mLastDrawable = null;
+                mLastIndex = -1;
+                mExitAnimationEnd = 0;
+            }
+        } else if (mCurrDrawable != null) {
+            mCurrDrawable.setVisible(false, false);
+        }
+
+        if (index >= 0 && index < mDrawableContainerState.mNumChildren) {
+            final Drawable d = mDrawableContainerState.getChild(index);
+            mCurrDrawable = d;
+            mCurIndex = index;
+            if (d != null) {
+                if (mDrawableContainerState.mEnterFadeDuration > 0) {
+                    mEnterAnimationEnd = now + mDrawableContainerState.mEnterFadeDuration;
+                }
+                initializeDrawableForDisplay(d);
+            }
+        } else {
+            mCurrDrawable = null;
+            mCurIndex = -1;
+        }
+
+        if (mEnterAnimationEnd != 0 || mExitAnimationEnd != 0) {
+            if (mAnimationRunnable == null) {
+                mAnimationRunnable = new Runnable() {
+                    @Override public void run() {
+                        animate(true);
+                        invalidateSelf();
+                    }
+                };
+            } else {
+                unscheduleSelf(mAnimationRunnable);
+            }
+            // Compute first frame and schedule next animation.
+            animate(true);
+        }
+
+        invalidateSelf();
+
+        return true;
+    }
+```
+
+　　一定会调用 invalidateSelf() 方法。
+
+### 3.10. Drawable#invalidateSelf
+
+```java
+    public void invalidateSelf() {
+        final Callback callback = getCallback();
+        if (callback != null) {
+            callback.invalidateDrawable(this);
+        }
+    }
+```
+
+　　可以看到，这里会先调用 getCallback() 方法获取 Callback 接口的回调实例，然后再去调用回调实例的 invalidateDrawable() 方法，而这里的回调实例就是 View，因为 View 类实现了 Callback 接口，所以这里其实调用的就是 View 中的 invalidateDrawable() 方法，之后就会按照重绘的流程执行重绘逻辑，所以视图的背景图才能够得到改变。
+
+```java
+public class View implements Drawable.Callback, KeyEvent.Callback,
+        AccessibilityEventSource {
+}
+```
+
+　　另外需要注意的是，invalidate() 方法虽然最终会调用 performTraversals() 方法中，但这时 measure 和 layout 流程是不会重新执行的，因为视图没有强制重新测量的标志位，而且大小也没有发生过变化，所以这时只有 draw 流程可以得到执行。
+
+　　而如果希望视图的绘制流程可以完完整整地重新走一遍，就不能使用 invalidate() 方法，而应该调用 requestLayout() 了。
+
+## 4. 参考文章
+1. [Android视图状态及重绘流程分析，带你一步步深入了解View(三)](https://blog.csdn.net/guolin_blog/article/details/17045157)
 
