--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -216,3 +216,5 @@
     [Android DiskLruCache完全解析，硬盘缓存的最佳方案](https://blog.csdn.net/guolin_blog/article/details/28863651)
     
 11. 类图、时序图的绘制
+
+12. GestureDetector
