--- a/Android/view/视图状态与重绘流程.md
+++ b/Android/view/视图状态与重绘流程.md
@@ -111,6 +111,7 @@
         }
 
         if (changed) {
+          	// 如果状态有变化，则调用 invalidate() 方法
             invalidate();
         }
     }
@@ -144,13 +145,13 @@
     }
 ```
 
-　　可以看到，在这里调用了 Resource 的 getDrawable() 方法将 resid 转换成了一个 Drawable 对象，然后调用了 setBackgroundDrawable() 方法并将这个 Drawable 对象传入，在 setBackgroundDrawable() 方法中会将传入的 Drawable 对象赋值给 mBackground 。
+　　可以看到，在这里调用了 Resource 的 getDrawable() 方法将 resid 转换成了一个 Drawable 对象，然后调用了 setBackground() 方法并将这个 Drawable 对象传入，在 setBackground() 方法中会将传入的 Drawable 对象赋值给 mBackground 。
 
 　　而在布局文件中通过 android:background 属性指定的 selector 文件，效果等同于调用 setBackgroundResource() 方法。也就是说 drawableStateChanged() 方法中的  mBackground  对象其实就是指定的 selector 文件。
 
-　　接着在 drawableStateChanged() 方法中调用了 getDrawableState() 方法来获取视图状态。
-
 #### 2.2.3. View#getDrawableState
+
+　　接着在 drawableStateChanged() 方法中调用了 getDrawableState() 方法来获取视图状态。
 
 ```java
     /**
@@ -295,13 +296,11 @@
                         !((ViewGroup) mParent).isViewTransitioning(this));
     }
 ```
-　　判断逻辑比较简单，如果 View 是不可见的并且没有动画，就认为不需要重绘了。
-
-如果有父视图，不是父视图的过渡视图，则认为视图需要重绘。
-
-　　invalidateInternal() 方法之后会进行透明度的判断，并给  View 添加一些标记位，然后调用 ViewParent 对象 p 的 invalidateChild() 方法，这里的 ViewParent 其实就是当前视图的俯视图，因此会调用到 ViewGroup 的 invalidateChild() 方法中。
+　　判断逻辑比较简单，如果 View 是不可见的并且没有动画，就认为不需要重绘了。如果有父视图，不是父视图的过渡视图，则认为视图需要重绘。
 
 ### 3.3. ViewGroup#invalidateChild
+
+　　invalidateInternal() 方法之后会进行透明度的判断，并给  View 添加一些标记位，然后调用 ViewParent 对象 p 的 invalidateChild() 方法，这里的 ViewParent 其实就是当前视图的父视图，因此会调用到 ViewGroup 的 invalidateChild() 方法中。
 
 ```java
     /**
@@ -391,6 +390,7 @@
                     }
                 }
 
+              	// 调用 invalidateChildInParent() 方法
                 parent = parent.invalidateChildInParent(location, dirty);
                 if (view != null) {
                     // Account for transform on current parent
@@ -422,6 +422,7 @@ public final class ViewRootImpl implements ViewParent,
         if (DEBUG_DRAW) Log.v(mTag, "Invalidate child: " + dirty);
 
         if (dirty == null) {
+          	// 调用 invalidate() 方法
             invalidate();
             return null;
         } else if (dirty.isEmpty() && !mIsAnimating) {
@@ -442,6 +443,7 @@ public final class ViewRootImpl implements ViewParent,
             }
         }
 
+      	// 调用 invalideteRectOnScreen() 方法
         invalidateRectOnScreen(dirty);
 
         return null;
@@ -457,6 +459,7 @@ public final class ViewRootImpl implements ViewParent,
         if (!mTraversalScheduled) {
             mTraversalScheduled = true;
             mTraversalBarrier = mHandler.getLooper().getQueue().postSyncBarrier();
+          	// 发出 callbackType 为 Choreographer.CALLBACK_TRAVERSAL 的消息，在收到消息后会调用 mTraversalRunnable 的 run 方法
             mChoreographer.postCallback(
                     Choreographer.CALLBACK_TRAVERSAL, mTraversalRunnable, null);
             if (!mUnbufferedInputDispatch) {
@@ -467,7 +470,7 @@ public final class ViewRootImpl implements ViewParent,
         }
     }
 ```
-　　scheduleTraversals() 方法主要就是发送消息。调用 mChoreographer.postCallback() 方法。
+　　scheduleTraversals() 方法主要就是调用 mChoreographer.postCallback() 方法发送消息。
 
 ### 3.6. Choreographer#postCallback
 
@@ -542,6 +545,7 @@ public final class Choreographer {
                 Debug.startMethodTracing("ViewAncestor");
             }
 
+          	// 调用 performTraversals() 方法
             performTraversals();
 
             if (mProfile) {
@@ -553,9 +557,11 @@ public final class Choreographer {
 ```
 　　在 doTraversal() 方法中调用 performTraversals() 方法，performTraversals() 方法是视图绘制的入口，虽然经过了很多辗转的调用，但是可以确定的是，调用视图的 invalidate() 方法后确实会走到 performTraversals() 方法中，然后重新执行绘制流程。
 
-　　而对于前面的 selectDrawable() 方法查看源码研究一下是如何控制背景图的改变的。
+## 4. selectDrawable() 改变背景图的源码分析
 
-### 3.9. StateListDrawable#selectDrawable
+　　对于前面的 selectDrawable() 方法查看源码研究一下是如何控制背景图的改变的。
+
+### 4.1. StateListDrawable#selectDrawable
 
 ```java
     public boolean selectDrawable(int index) {
@@ -616,6 +622,7 @@ public final class Choreographer {
             animate(true);
         }
 
+        // 调用 invalidateSelf() 方法
         invalidateSelf();
 
         return true;
@@ -624,18 +631,19 @@ public final class Choreographer {
 
 　　一定会调用 invalidateSelf() 方法。
 
-### 3.10. Drawable#invalidateSelf
+### 4.2. Drawable#invalidateSelf
 
 ```java
     public void invalidateSelf() {
         final Callback callback = getCallback();
         if (callback != null) {
+          	// 调用的是 View 的 invalidateDrawable() 方法
             callback.invalidateDrawable(this);
         }
     }
 ```
 
-　　可以看到，这里会先调用 getCallback() 方法获取 Callback 接口的回调实例，然后再去调用回调实例的 invalidateDrawable() 方法，而这里的回调实例就是 View，因为 View 类实现了 Callback 接口，所以这里其实调用的就是 View 中的 invalidateDrawable() 方法，之后就会按照重绘的流程执行重绘逻辑，所以视图的背景图才能够得到改变。
+　　可以看到，这里会先调用 getCallback() 方法获取 Callback 接口的回调实例，然后再去调用回调实例的 invalidateDrawable() 方法，而这里的回调实例就是 View，因为 View 类实现了 Callback 接口，所以这里其实调用的就是 View 中的 invalidateDrawable() 方法，而 invalidateDrawable() 方法中调用了 invalidate() 方法，之后就会按照重绘的流程执行重绘逻辑，所以视图的背景图才能够得到改变。
 
 ```java
 public class View implements Drawable.Callback, KeyEvent.Callback,
@@ -647,6 +655,6 @@ public class View implements Drawable.Callback, KeyEvent.Callback,
 
 　　而如果希望视图的绘制流程可以完完整整地重新走一遍，就不能使用 invalidate() 方法，而应该调用 requestLayout() 了。
 
-## 4. 参考文章
+## 5. 参考文章
 1. [Android视图状态及重绘流程分析，带你一步步深入了解View(三)](https://blog.csdn.net/guolin_blog/article/details/17045157)
 
