--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -102,8 +102,8 @@
 1. 《 图解 HTTP》第 3 章
 2. AsyncTask
 3. 《 Android 开发艺术探索 》第 2 章
-4. 运动 20 天
-5. 绘画 7 幅
+4. 运动 24 天
+5. 绘画 8 幅
 6. ContentProvider 源码分析
 7. AMS 知识
 8. 内存泄漏与内存溢出
@@ -111,6 +111,14 @@
 10. WMS 知识
 11. 优化
 12. PMS 启动解析
+
+
+
+### 2020 年 5 月
+
+1. View 整理
+2. 绘画 1 张
+3. 运动 2 天
 
 
 
@@ -125,7 +133,6 @@
    * IdleHandler
    * IntentService - Service 的知识里面有提到一些
    * 事件分发机制
-   * View 绘制流程
    * Window、Activity、DecorView 以及 ViewRoot 之间的关系
    * AIDL
    * PMS
@@ -138,6 +145,7 @@
    * ArrayMap
    * SpareArray
    * nano ptotobufs
+   * View 绘制流程 - 已完成
    * WMS - 已完成
    * AMS - 已完成
    * 优化 - 已完成
