--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -1,7 +1,8 @@
 # 计算机网络基础知识
 
-## 
-　　
+
+
+## 网络层次划分
 
 ## 网络时延
 　　RTT(Round-Trip Time)：往返时延，在计算机网络中它是一个重要的性能指标，它表示从发送端发送数据开始，到发送端收到来自接收端的确认（接收端收到数据后便立即发送确认），总共经历的时延。
