--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -102,7 +102,7 @@
 1. 《 图解 HTTP》第 3 章
 2. AsyncTask
 3. 《 Android 开发艺术探索 》第 2 章
-4. 运动 24 天
+4. 运动 25 天
 5. 绘画 8 幅
 6. ContentProvider 源码分析
 7. AMS 知识
@@ -118,7 +118,8 @@
 
 1. View 整理
 2. 绘画 1 张
-3. 运动 2 天
+3. 运动 9 天
+4. 缓存机制
 
 
 
@@ -137,7 +138,7 @@
    * AIDL
    * PMS
    * 屏幕适配
-   * 缓存机制
+   * 缓存机制 - 已完成
    * 多进程通信
    * ArrayDeque
    * CopyOnWriteArrayList
@@ -157,7 +158,7 @@
    * Fragment - 已完成
 2. 开源库
    * Glide
-   * LRUCache
+   * LRUCache - 已完成
    * Picasso
    * eventBus
    * ButterKnife
@@ -232,3 +233,9 @@
     [fiddler4使用教程](https://blog.csdn.net/chaoyu168/article/details/51065644)
     
 14. ArrayBlockingQueue 阻塞队列
+
+15. Java 注解
+
+    [Java 注解（Annotation）](https://www.runoob.com/w3cnote/java-annotation.html)
+
+16. 
