整理算法要看的知识

--- a/DataStructure/数据结构/线性表.md
+++ b/DataStructure/数据结构/线性表.md
@@ -10,4 +10,5 @@
 2. [数据结构--知识点总结--线性表](https://blog.csdn.net/Void_worker/article/details/81058094)
 3. [数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析](https://chiclaim.blog.csdn.net/article/details/80158343)
 4. [数据结构与算法（二）线性表之链式存储和 LinkedList 实现](https://chiclaim.blog.csdn.net/article/details/80351584)
+5. [数据结构与算法（四）队列和 Java ArrayDeque 源码剖析](https://chiclaim.blog.csdn.net/article/details/80456833)
 
