--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -1,10 +1,29 @@
 # 计算机网络基础知识
 
+　　计算即网络学习的核心额呢绒就是网络协议的学习。网络协议是为计算机网络中进行数据交换而建立的规则、标准或者说是约定的集合。因为不同用户的数据终端可能采取的字符集是不同的，两者需要进行通信，必须要在一定的标准上进行。
 
+　　计算机网络协议同语言一样，多种多样。而 SRPA 公司于 1977 年到 1979 年推出了一种名为 ARPANET 的网络协议受到了广泛的热捧，其中最主要的原因就是它推出了人尽皆知的 TCP/IP 标准网络协议。目前 TCP/IP 协议已经成为 Internet 中的 “通用语言”。下面为不同计算机群之间利用 TCP/IP 进行通信的示意图。
+
+![](image/不同计算机群之间利用TCPIP进行通信的示意图.png)
 
 ## 网络层次划分
 
+　　为了使不同计算机厂家生产的计算机能够相互通信，以便在更大的范围内建立计算机网络，国际标准化组织（ISO）在 1978 年提出了 “开放系统互联参考模型”，即著名的 OSI/RM 模型（Open System Interconnection/Reference Model）。它将计算机网络体系结构的通信协议划分为七层，自下而上依次为：物理层（Physics Layer）、数据链路层（Data Link Layer）、网络层（Network Layer）、传输层（Transport Layer）、会话层（Session Layer）、表示层（Presentation Layer）、应用层（Application Layer）。其中第四层完成数据传输服务，上面三层面向用户。
+
+　　除了标准的 OSI 七层模型以外，常见的网络层划分还有 TCP/IP 四层协议以及 TCP/IP 五层协议，它们之间的对应关系如下图所示：
+
+![](image/网络层次.jpg) 
+
+## OSI 七层网络模型
+
+
+
+
+
+
+
 ## 网络时延
+
 　　RTT(Round-Trip Time)：往返时延，在计算机网络中它是一个重要的性能指标，它表示从发送端发送数据开始，到发送端收到来自接收端的确认（接收端收到数据后便立即发送确认），总共经历的时延。
 
 　　通常，时延由发送时延、传播时延、排队时延、处理时延四个部分组成。
