--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -238,4 +238,6 @@
 
     [Java 注解（Annotation）](https://www.runoob.com/w3cnote/java-annotation.html)
 
-16. 
+16. 解析 html内容
+
+    [在 Android 应用中使用 HTML Parser 便捷的解析 html 内容](https://www.ibm.com/developerworks/cn/opensource/os-cn-android-hp/index.html)
