--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -28,7 +28,232 @@
 
 　　数据链路层在物理层提供的服务的基础上向网络层提供服务，其最基本的服务是将源自网络层来的数据可靠地传输到相邻节点的目标机网络层。
 
-　　为达到这一目的，数据链路必须具备一系列相应的功能，主要有：如何将数据组合成数据块，在数据链路层中称这种数据块为帧，
+　　为达到这一目的，数据链路必须具备一系列相应的功能，主要有：如何将数据组合成数据块，在数据链路层中称这种数据块为帧，帧是数据链路层的传送单位；如何控制帧在物理信道上的传输，包括如何处理传输差错，如何调节发送速率以使与接收方相匹配；以及在两个网络实体之间提供数据链路通路的建立、维持和释放的管理。
+
+　　数据链路层在不可靠的物理介质上提供可靠的传输。该层的作用包括：物理地址寻址、数据的成帧、流量控制、数据的检错、重发等。
+
+　　有关数据链路层的重要知识点：
+
+1. 数据链路层为网络层提供可靠的数据传输；
+2. 基本数据单位为帧；
+3. 主要的协议：以太网协议；
+4. 两个重要设备名称：网桥和交换机；
+
+### 网络层（Network Layer）
+
+　　网络层的目的是实现两个端系统之间的数据透明传送，具体功能包括寻址和路由选择、连接的建立、保持和终止等。它提供的服务使传输层不需要了解网络中的数据传输和交换技术。如果想用尽量少的词记住网络层，那就是“路径选择、路由及逻辑寻址”。
+
+　　网络层中设计众多的协议，其中包括最重要的协议，也是 TCP/IP 的核心协议 -- IP 协议。IP 协议非常简单，仅仅提供不可靠、无连接的传送服务。
+
+　　IP 协议的主要功能有：无连接数据报传输、数据报路由选择和差错控制。
+
+　　与 IP 协议配套使用实现其功能的还有地址解析协议 ARP、逆地址解析协议 RARP、因特网报文协议 ICMP、因特网组管理协议 IGMP。
+
+　　有关网络层的重点为：
+
+1. 网络层负责对子网间的数据包进行路由选择。此外，网络层还可以实现拥塞控制、网际互连等功能；
+2. 基本数据单位为 IP 数据包；
+3. 包含的主要协议：
+   * IP 协议（Internet Protocal，因特网互联协议）；
+   * ICMP 协议（Internet Control Message Protocal，因特网控制报文协议）；
+   * ARP 协议（Address Resolution Protocol，地址解析协议）；
+   * RARP 协议（Reverse Address Resolution Protocal，逆地址解析协议）。
+4. 重要的设备：路由器。
+
+### 传输层（Transport Layer）
+
+　　第一个端到端，即主机到主机的层次。传输层负责将上层数据分段并提供端到端、可靠的或不可靠的传输。此外，传输层还要处理端到端的差错控制和流量控制问题。传输层的任务是根据通信子网的特性，最佳的利用网络资源，为两个端系统的会话层之间，提供建立、维护和取消传输连接的功能，负责端到端的可靠数据传输。在这一层，信息传送的协议单元称段或报文。网络层知识根据网络地址将源结点发出的数据包传送给到目的结点，而传输层则负责将数据可靠的传送到相应的端口。
+
+　　有关网络层的重点：
+
+1. 传输层负责将上层数据分段并提供端到端、可靠的或不可靠的传输以及端到端的差错控制和流量控制问题。
+2. 包含的主要协议：TCP 协议（Transmission Control Protocol，传输控制协议）、UDP 协议（User Datagram Protocal，用户数据报协议）；
+3. 重要设备：网关。
+
+### 会话层
+
+　　会话层管理主机之间得会话进程，即负责建立、管理、终止进程之间的会话。会话层还历用再数据中插入校验点来实现数据的同步。
+
+### 表示层
+
+　　表示层对上层数据或信息进行变换以保证一个主机应用层信息可以被另一个主机的应用程序理解。表示层的数据转换包括数据的加密、压缩、格式转换等。
+
+### 应用层
+
+　　为操作系统或网络应用程序提供访问网络服务的接口。
+
+　　会话层、标识层和应用层重点：
+
+1. 数据传输基本单位为报文；
+2. 包含的主要协议：FTP（文件传送协议）、Telnet（远程登录协议）、DNS（域名解析协议）、SMTP（邮件传送协议）、POP3（邮局协议）、HTTP 协议（Hyper Text Transfer Protocal）。
+
+## IP 地址
+
+### 网络地址
+
+　　IP 地址由网络号（包括子网号）和主机号组成，网络地址的主机号为全 0，网络地址代表着整个网络。
+
+### 广播地址
+
+　　广播地址通常称为直接广播地址，是为了区分受限广播地址。
+
+　　广播地址与网络地址的主机号正好相反，广播地址中，主机号为全 1.当向某个网络的广播地址发送消息时，该网络内的所有主机都能收到该广播消息。
+
+### 组播地址
+
+　　D 类地址就是组播地址。
+
+　　A、B、C、D 类地址：
+
+1. A 类地址以 0 开头，第一个子节作为网络号，地址范围为： 0.0.0.0 ~ 127.255.255.255；
+2. B 类地址以 10 开头，前两个子节作为网络号，地址范围是：128.0.0.0 ~ 191.255.255.255；
+3. C 类地址以 110 开头，前三个子节作为网络号，地址范围是：192.0.0.0 ~ 223.255.255.255；
+4. D 类地址以 1110 开头，地址范围是 224.0.0.0 ~ 239.255.255.255，D 类地址作为组播地址（一对多的通信）；
+5. E 类地址以 1111 开头，地址范围是 240.0.0.0 ~ 255.255.255.255，E 类地址为保留地址，供以后使用。、
+
+　　注：只有 A、B、C 有网络号和主机号之分，D 类地址和 E 类地址没有划分网络号和主机号。
+
+### 255.255.255.255
+
+　　该 IP 地址指的是首先的广播地址。受限广播地址与一般广播地址（直接广播地址）的区别在于，受限广播地址只能用于本地网络，路由器不会转发以受限广播地址为目的地址的分组；一般广播地址即可在本地广播，也可跨网段广播。例如：主机 192.168.1.1/30 上的直接广播数据包后，另外一个网段 192.168.1.5/30 也能收到该数据包；若发送受限广播数据包，则不能收到。
+
+　　注：一般的广播地址（直接广播地址）能够通过某些路由器（当然不是所有的路由器），而受限的广播地址不能通过路由器。
+
+### 0.0.0.0
+
+　　常用于寻找自己的 IP 地址，例如在 RARP、BOOTP 和 DHCP 协议中，若某个未知 IP 地址的无盘机想要自己的 IP 地址，它就以 255.255.255.255 为目的地址，向本地范围（具体而言是被哥哥路由器屏蔽的范围内）的服务器发送 IP 请求分组。
+
+### 回环地址
+
+　　127.0.0.0/8 被作为回环地址，回环地址表示本机的地址，常用于对本机的测试，用的最多的是 127.0.0.1。
+
+### A、B、C 类私有地址
+
+　　私有地址（private address）也叫专用地址，它们不会在全球使用，只具有本地意义。
+
+　　A 类私有地址：10.0.0.0/8。范围是：10.0.0.0 ~ 10.255.255.255。
+
+　　B 类私有地址：172.16.0.0/12，范围是：172.16.0.0 ~ 172.31.255.255。
+
+　　C 类私有地址：192.169.0.0/16，范围是：192.168.0.0 ~ 192.168.255.255。
+
+## 子网掩码及网络划分
+
+　　随着互联网应用的不断扩大，原先的 IPv4 的弊端就逐渐暴露出来，即网络号占位太多，而主机号位太少，所以其能提供的主机地址也越来越稀缺，目前出了使用 NAT 在企业内部利用保留地址自行分配以外，通常都对一个高类别的 IP 地址进行再划分，以形成多个子网，提供给不同规模的用户群使用。
+
+　　这里主要是为了在网络分段情况下有效地利用 IP 地址，通过对主机号的高位部分取作为子网号，从通常的网络位界限中扩展或压缩子网掩码，用来创建某类地址的更多子网。但创建更多的子网时，在每个子网上的可用主机地址数目会比原先减少。
+
+### 什么是子网掩码？
+
+　　子网掩码是标志两个 IP 地址是否同属于一个子网的，也是 32 位二进制地址，其每一个为 1 代表该位的网络位，为 0 表示主机位。它和 IP 地址一样也是使用点式十进制来表示的。如果两个 IP 地址在子网掩码的按位与的计算下所得结果相同，即表明它们共属于同一子网中。
+
+　　在计算子网掩码时，要注意 IP 地址中的保留地址，即 “0” 地址和广播地址，它们是指主机地址或网络地址全为 “0” 或 “1” 时的 IP 地址，它们代表着本地网络地址和广播地址，一般时不能被计算在内的。
+
+### 子网掩码的计算
+
+　　对于无须再划分成子网的 IP 地址来说，其子网掩码非常简单，即按照其定义即可写出：如果 B 类 IP 地址为 10.12.3.0，无需再分割子网，则该 IP 地址的子网掩码 255.255.0.0。如果它是一个 C 类地址，则其子网掩码为 255.255.255.0。其他类推。
+
+　　下面关键介绍的是一个 IP 地址，还需要将其高位主机位在作为划分出的子网网络号，剩下的时每个子网的主机号，这时该如何进行每个子网的掩码计算。
+
+### 有关子网掩码和网络划分常见的面试考题
+
+#### 1. 利用子网数来计算
+
+　　在求子网掩码之前必须先搞清楚要划分的子网数目，以及每个子网内的所需主机数目。
+
+1. 将子网数目转化为二进制来表示；
+
+   如欲将 B 类 IP 地址 168.195.0.0 划分成 27 个子网：27 = 11011； 
+
+2. 取得该二进制的位数，为 N；
+
+   该二进制为五位数，N=5；
+
+3. 取得该 IP 地址的类子网掩码，将其主机地址部分的前 N 位置 1 即得出该 IP 地址划分子网的子网掩码。
+
+   将 B 类地址的子网掩码 255.255.0.0 的主机地址前 5 位置 1，得到 255.255.248.0。
+
+#### 2. 利用主机数来计算
+
+　　如欲将 B 类 IP 地址 168.195.0.0 划分成若干子网，每个子网内有主机 700 台。
+
+1. 将主机数目转换为二进制来表示；
+
+   700 = 1010111100
+
+2. 如果主机数小于或等于 254（注意去掉保留的两个 IP 地址），则取得该主机的二进制位数，为 N，这里肯定 N<8。如果大于 254，则 N>9，这就是说主机地址将占据不止 8 位；
+
+   该二进制为十位数，N=10;
+
+3. 使用 255.255.255.255 来将该 IP 地址的主机地址位数全部置为 1，然后从后向前将 N 为全部置为 0，即为子网掩码值。
+
+   将该 B 类地址的子网掩码 255.255.0.0. 的主机地址全部置为 1，得到 255.255.255.255，然后再从后向前将后 10 位置为 0，即为：11111111.11111111.11111100.00000000，即 255.255.252.0。这就是该欲划分成主机为 700 台的 B 类 IP 地址 168.195.0.0 的子网掩码。
+
+#### 3. 根据每个网络的主机数量进行子网地址的规划和计算子网掩码
+
+　　比如一个子网有 10 台主机，那么对于这个子网需要的 IP 地址是：10+1+1+1 = 13。
+
+　　注意：加的第一个 1 是指这个网络连接时所需的网关地址，接着的两个 1 分别是指网络地址和广播地址。
+
+　　因为 13 小于 16（16 等于 2 的 4 次方），所以主机位为 4 为。而 256 -16 = 240，所以该子网掩码为 255.255.255.240。
+
+　　如果一个子网有 14 台主机，不少人常犯的错误是：依然分配具有 16 个地址空间的子网，而忘记了给网关分配地址。这样就错误了，因为 14+1+1+1 = 17，17 大于 16，所以只能分配具有 32 个地址（32 等于 2 的 5 次方）空间的子网。这时子网掩码为 255.255.255.224。
+
+## ARP/RARP 协议
+
+　　地址解析协议，即 ARP（Address Resolution Protocol），是根据 IP 地址获取物理地址的一个 TCP/IP 协议。
+
+　　主机发送消息时将包含目标 IP 地址的 ARP 强求广播道网络上的所有主机，并接收返回消息，以此确定目标的物理地址；收到返回消息后将该 IP 地址和物理地址存入本地 ARP 缓存中并保留一定时间，下次请求时直接查询 ARP 缓存以节约资源。地址解析协议是建立在网络上各个主机互相信任的基础上的，网络上的主机可以自主发送 ARP 应答消息，其他主机收到应答报文时不会检测该报文的真实性就会将其计入本机 ARP 缓存；由此攻击者就可以向某一主机发送伪 ARP 应答报文，使其发送的消息无法达到预期的主机或达到错误的主机，这就构成了一个 ARP 欺骗。
+
+　　ARP 命令可用于查询本机 ARP 缓存中 IP 地址和 MAC 地址的对应关系、添加或删除静态对应关系等。
+
+### ARP 工作流程举例
+
+　　主机 A 的 IP 地址为 192.168.1.1，MAC 地址为 0A-11-22-33-44-01；
+
+　　主机 B 的 IP 地址为 192.168.1.2，MAC 地址为 0A-11-22-33-44-01;
+
+　　当主机 A 要与主机 B 通信时，地址解析协议可以将主机 B 的 IP 地址（192.168.1.2）解析成主机 B 的 MAX 地址，以下为工作流程：
+
+1. 根据主机 A 上的路由表内容，IP 确定用于访问主机 B 的转发 IP 地址是 192.168.1.2。然后 A 主机在自己的本地 ARP 缓存中检查主机 B 的匹配 MAC 地址。
+2. 如果主机 A 在 ARP 缓存中没有找到映射，它将询问 192.168.1.2 的硬件地址，从而将 ARP 请求帧广播到本地网络上的所有主机。源主机 A 的 IP 地址和 AMX 地址豆包括在 ARP 请求中。本地网络上的每台主机都接收到 ARP 请求并且检查是否与自己的 IP 地址匹配。如果主机发现请求的 IP 地址与自己的 IP 地址不匹配，它将丢弃 ARP 请求。
+3. 主机 B 确定 ARP 请求中的 IP 地址与自己的 IP 地址匹配，则将主机 A 的 IP 地址和 MAC 地址映射添加到 ARP 缓存中。
+4. 主机 B 将包含其 MAC 地址的 ARP 回复消息直接发送回主机 A。
+5. 当主机 A 收到从主机 B 发送的 ARP 回复消息时，会用主机 B 的 IP 和 MAC 地址映射更新 ARP 缓存。本机缓存是有生存期，生存期结束后，将再次重复上面的过程。主机 B 的 MAC 地址即一旦确定，主机 A 就能向主机 B 发送 IP 通信了。
+
+　　逆地址解析协议，即 RARP，功能和 ARP 协议相对，其将局域网中某个主机的物理地址转换为 IP 地址。
+
+　　
+
+## 路由选择协议
+
+
+
+## TCP/IP 协议
+
+
+
+## UDP 协议
+
+
+
+## DNS 协议
+
+
+
+## NAT 协议
+
+
+
+## DHCP 协议
+
+
+
+## HTTP 协议
+
+
+
+
 
 
 
@@ -63,7 +288,13 @@
 
 　　往返时延（Round-Trip Time,RRT）是一个重要的性能指标，它表示从发送方发送数据开始，到发送方收到来自接收方的确认，总共经历的时延。对于负责的网络，往返时延要包括各中间结点的处理时延和转发数据时的发送时延。
 
+
+
+## 在浏览器输入网址后执行的全部过程
+
+
+
 ## 参考文章
-[计算机网络基础知识总结](https://www.runoob.com/w3cnote/summary-of-network.html)
-[Socket学习网络基本准备](https://www.runoob.com/w3cnote/android-tutorial-socket-intro.html)
-[什么是RTT？计算机网络里的东西](https://zhidao.baidu.com/question/58798218.html)
+1. [计算机网络基础知识总结](https://www.runoob.com/w3cnote/summary-of-network.html)
+2. [Socket学习网络基本准备](https://www.runoob.com/w3cnote/android-tutorial-socket-intro.html)
+3. [什么是RTT？计算机网络里的东西](https://zhidao.baidu.com/question/58798218.html)
