--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -1,12 +1,12 @@
 # 计算机网络基础知识
 
-　　计算即网络学习的核心额呢绒就是网络协议的学习。网络协议是为计算机网络中进行数据交换而建立的规则、标准或者说是约定的集合。因为不同用户的数据终端可能采取的字符集是不同的，两者需要进行通信，必须要在一定的标准上进行。
+　　计算即网络学习的核心内容就是网络协议的学习。网络协议是为计算机网络中进行数据交换而建立的规则、标准或者说是约定的集合。因为不同用户的数据终端可能采取的字符集是不同的，两者需要进行通信，必须要在一定的标准上进行。
 
 　　计算机网络协议同语言一样，多种多样。而 SRPA 公司于 1977 年到 1979 年推出了一种名为 ARPANET 的网络协议受到了广泛的热捧，其中最主要的原因就是它推出了人尽皆知的 TCP/IP 标准网络协议。目前 TCP/IP 协议已经成为 Internet 中的 “通用语言”。下面为不同计算机群之间利用 TCP/IP 进行通信的示意图。
 
 ![](image/不同计算机群之间利用TCPIP进行通信的示意图.png)
 
-## 网络层次划分
+## 1. 网络层次划分
 
 　　为了使不同计算机厂家生产的计算机能够相互通信，以便在更大的范围内建立计算机网络，国际标准化组织（ISO）在 1978 年提出了 “开放系统互联参考模型”，即著名的 OSI/RM 模型（Open System Interconnection/Reference Model）。它将计算机网络体系结构的通信协议划分为七层，自下而上依次为：物理层（Physics Layer）、数据链路层（Data Link Layer）、网络层（Network Layer）、传输层（Transport Layer）、会话层（Session Layer）、表示层（Presentation Layer）、应用层（Application Layer）。其中第四层完成数据传输服务，上面三层面向用户。
 
@@ -14,19 +14,68 @@
 
 ![](image/网络层次.jpg) 
 
-## OSI 七层网络模型
+### 1.1. OSI 七层网络模型
 
 　　TCP/IP 协议毫无疑问是互联网的基础协议，没有它就根本不可能上网，任何和互联网有关的操作都离不开 TCP/IP 协议。不管是 OSI 七层模型还是 TP/IP 的四层、五层模型，每一层中都要自己的专属协议，完成自己相应的工作以及与上下层级之间进行沟通。由于 OSI 七层模型为网络的标准层次划分，所以以 OSI 汽侧过模型为例从下向上进行一一介绍。
 
 ![](image/OSI七层模型.png)
 
-### 物理层（Physical Layer）
+　　TCP/IP 对 OSI 的网络模型层进行了划分如下所示：
+
+![](image/OSI的网络模型层.png)
+
+　　TCP/IP 协议参考模型把所有的 TCP/IP 系列协议归类到四个抽象层中：
+
+* 应用层：TETP、HTTP、SNMP、FTP、SMTP、DNS、Telnet 等。
+* 传输层：TCP、UDP。
+* 网络层：IP、ICMP、OSPF、EIGRP、IGMP。
+* 数据链路层：SLIP、CSLIP、PPP、MTU。
+
+　　每一抽象层建立在低一层提供的服务商，并且为高一层提供服务，看起来大概是这样子的。
+
+![](image/协议服务1.png)
+
+![](image/协议服务2.png)
+
+
+
+
+
+　　会话层、表示层和应用层重点：
+
+1. 数据传输基本单位为报文；
+2. 包含的主要协议：FTP（文件传送协议）、Telnet（远程登录协议）、DNS（域名解析协议）、SMTP（邮件传送协议）、POP3（邮局协议）、HTTP 协议（Hyper Text Transfer Protocal）。
+
+　　OSI 是一个理想的模型，一般的网络系统只涉及其中的几层，在七层模型中，每一层都提供一个特殊的网络功能，从网络功能角度观察：
+
+* 下面 4 层（物理层、数据链路层、网络层和输出层）主要提供数据传输和交换功能，即以节点到节点之间的通信为主
+* 第 4 层作为上下两部分的桥梁，是整个网络体系结构中最关键的部分
+* 上 3 层（会话层、表示层和应用层）则以提供用户与应用程序之间的信息和数据处理功能为主。
+
+　　简而言之，下 4 层主要完成通信子网的功能，上 3 层主要完成资源子网的功能。
+
+### 1.2. TCP/IP 四层模型
+
+![](image/TCPIP四层模型.jpg)
+
+　　TCP/IP 是一组协议的代名词，它还包括许多协议，组成了 TCP/IP 协议簇。TCP/IP 协议簇分为四层，IP 位于协议簇的第二层（对应 OSI 的第三层），TCP 位于协议簇的第三层（对应 OSI 的第四层）。TCP/IP 通讯协议采用了 4 层的层级结构，每一层都呼叫它的下一层所提供的网络来完成自己的需求。
+
+　　这 4 层分别为：
+
+* 应用层：应用程序间沟通的层，如简单电子邮件传输（SMTP）、文件传输协议（FTP）、网络远程访问协议（Telnet）等。
+* 传输成：在此层中，它提供了节点间的数据传输服务，如传输控制协议（TCP）、用户数据报协议（UDP）等，TCP 和 UDP 给数据包加入传输数据并把它传输到下一层中，这一层负责传送数据，并且确定数据已被送达并接收。
+* 网络互连层：负责提供基本的数据封包传送功能，让每一块数据包都能够到达目的主机（但不检查是否被正确接收），如网际协议（IP）。
+* 主机到网络层：对实际的网络媒体的管理，定义如何使用实际网络（如 Ethernet、Serial Line 等）来传送数据。
+
+
+
+## 2. 物理层（Physical Layer）
 
 　　激活、维持、关闭通信端点之间的机械特性、电气特性、功能特性以及过程特性。该层为上层协议提供了一个传输数据的可靠的物理媒体。简单的说，物理层确保原始的数据可在各种物理媒体上传输。物理层记住两个重要的设备名称，中继器（Repeater，也叫放大器）和集线器。
 
 　　设备之间的数据通信提供传输媒体及互连设备，为数据传输提供可靠的环境。可以理解为网络传输的物理媒体部分，比如网卡、网线、集线器、中继器、调制解调器等！在这一层，数据还没有被组织，仅作为原始的位流或电气电压处理，这一层的单位是：bit 比特。
 
-### 数据链路层（Data Link Layer）
+## 3. 数据链路层（Data Link Layer）
 
 　　数据链路层在物理层提供的服务的基础上向网络层提供服务，其最基本的服务是将源自网络层来的数据可靠地传输到相邻节点的目标机网络层。
 
@@ -47,7 +96,7 @@
 3. 主要的协议：以太网协议；
 4. 两个重要设备名称：网桥和交换机；
 
-### 网络层（Network Layer）
+## 4. 网络层（Network Layer）
 
 　　网络层的目的是实现两个端系统之间的数据透明传送，具体功能包括寻址和路由选择、连接的建立、保持和终止等。它提供的服务使传输层不需要了解网络中的数据传输和交换技术。如果想用尽量少的词记住网络层，那就是“路径选择、路由及逻辑寻址”。
 
@@ -70,7 +119,7 @@
    * RARP 协议（Reverse Address Resolution Protocal，逆地址解析协议）。
 4. 重要的设备：路由器。
 
-### 传输层（Transport Layer）
+## 5. 传输层（Transport Layer）
 
 　　第一个端到端，即主机到主机的层次。传输层负责将上层数据分段并提供端到端、可靠的或不可靠的传输。此外，传输层还要处理端到端的差错控制和流量控制问题。传输层的任务是根据通信子网的特性，最佳的利用网络资源，为两个端系统的会话层之间，提供建立、维护和取消传输连接的功能，负责端到端的可靠数据传输。在这一层，信息传送的协议单元称段或报文。网络层知识根据网络地址将源结点发出的数据包传送给到目的结点，而传输层则负责将数据可靠的传送到相应的端口。
 
@@ -82,49 +131,25 @@
 2. 包含的主要协议：TCP 协议（Transmission Control Protocol，传输控制协议）、UDP 协议（User Datagram Protocal，用户数据报协议）；
 3. 重要设备：网关。
 
-### 会话层
+## 6. 会话层
 
 　　会话层管理主机之间得会话进程，即负责建立、管理、终止进程之间的会话。会话层还历用再数据中插入校验点来实现数据的同步。
 
 　　负责在网络中的两节点之间建立、维持和终止通信。建立通信链接，保持会话过程通信链接的畅通，同步两个节点之间的对话，决定通信是否被中断以及通信中断时决定从何处重新发送，即不同机器上的用户之间会话的建立及管理！
 
-### 表示层
+## 7. 表示层
 
 　　表示层对上层数据或信息进行变换以保证一个主机应用层信息可以被另一个主机的应用程序理解。表示层的数据转换包括数据的加密、压缩、格式转换等。
 
 　　对来自应用程的命令和数据进行解释，对各种语法赋予相应的含义，并按照一定的格式传送给会话层。其主要功能是 “ 处理用户信息的表示问题，如编码、数据格式转换和加密解密、压缩解压缩 ” 等。
 
-### 应用层
+## 8. 应用层
 
 　　为操作系统或网络应用程序提供访问网络服务的接口。
 
 　　OSI 参考模型的最高层，为用户的应用程序提供网络服务。它在其他 6 层工作的基础上，负责完成网络中应用程序与网络操作系统之间的联系，建立与结束使用者之间的联系，并完成网络用户提出的各种网络服务及应用所需的监督、管理和服务等各种协议。此外，该层还负责协调各个应用程序间的工作。应用层为用户提供的服务和协议有：文件服务、目录服务、文件传输服务（FTP）、远程登录服务（Telnet）、电子邮件服务（E-mail）、打印服务、安全服务、网络管理服务、数据库服务等等。
 
-　　会话层、标识层和应用层重点：
 
-1. 数据传输基本单位为报文；
-2. 包含的主要协议：FTP（文件传送协议）、Telnet（远程登录协议）、DNS（域名解析协议）、SMTP（邮件传送协议）、POP3（邮局协议）、HTTP 协议（Hyper Text Transfer Protocal）。
-
-　　OSI 是一个理想的模型，一般的网络系统只涉及其中的几层，在七层模型中，每一层都提供一个特殊的网络功能，从网络功能角度观察：
-
-* 下面 4 层（物理层、数据链路层、网络层和输出层）主要提供数据传输和交换功能，即以节点到节点之间的通信为主
-* 第 4 层作为上下两部分的桥梁，是整个网络体系结构中最关键的部分
-* 上 3 层（会话层、表示层和应用层）则以提供用户与应用程序之间的信息和数据处理功能为主。
-
-　　简而言之，下 4 层主要完成通信子网的功能，上 3 层主要完成资源子网的功能。
-
-## TCP/IP 四层模型
-
-![](image/TCPIP四层模型.jpg)
-
-　　TCP/IP 是一组协议的代名词，它还包括许多协议，组成了 TCP/IP 协议簇。TCP/IP 协议簇分为四层，IP 位于协议簇的第二层（对应 OSI 的第三层），TCP 位于协议簇的第三层（对应 OSI 的第四层）。TCP/IP 通讯协议采用了 4 层的层级结构，每一层都呼叫它的下一层所提供的网络来完成自己的需求。
-
-　　这 4 层分别为：
-
-* 应用层：应用程序间沟通的层，如简单电子邮件传输（SMTP）、文件传输协议（FTP）、网络远程访问协议（Telnet）等。
-* 传输成：在此层中，它提供了节点间的数据传输服务，如传输控制协议（TCP）、用户数据报协议（UDP）等，TCP 和 UDP 给数据包加入传输数据并把它传输到下一层中，这一层负责传送数据，并且确定数据已被送达并接收。
-* 网络互连层：负责提供基本的数据封包传送功能，让每一块数据包都能够到达目的主机（但不检查是否被正确接收），如网际协议（IP）。
-* 主机到网络层：对实际的网络媒体的管理，定义如何使用实际网络（如 Ethernet、Serial Line 等）来传送数据。
 
 ## IP 地址
 
@@ -304,9 +329,15 @@
 
 　　IP 层接收由更底层（网络接口层，例如以太网设备驱动程序）发来地数据包，并把该数据包发送到更高层 -TCP 或 UDP 层；相反，IP 层也把从 TCP 或 UDP 层接收来的数据包传送到更底层。IP 数据包是不可靠的，因为 IP 并没有做任何事情来确认数据包是否按顺序发送的或者有没有被破坏，IP 数据包中含有发送它的主机的地址（源地址）和接收他的主机的地址（目的地址）。
 
+　　TCP/IP 【TCP（传输控制协议）和 IP（网际协议）】提供点对点的连接机制，将数据应该如何封装、定址、传输、路由以及在目的地如何接收，都加以标准化。它将软件通信过程抽象化为四个抽象层，采取协议堆栈的方式，分别实现出不同通信协议。协议族下的各种协议，依其功能不同，被分别归属到这四个层次结构之中，常被视为是简化的七层 OSI 模型。
+
+　　它们之间好比送信的线路和驿站的作用，比如要建议送信驿站，必须要了解送信的各个细节。
+
 ### TCP 协议
 
 　　TCP （Transmission Control Protocal，传输控制协议）是面向连接的通信协议，通过三次握手建立连接，通讯完成时要拆除连接，由于 TCP 是面向连接的所以只能用于端到端的通讯。TCP 提供的是一种可靠的数据流服务，采用 “带重传的肯定确认”技术来实现传输的可靠性。TCP 还采用一种称为“滑动窗口”的方式进行流量控制，所谓窗口实际表示接收能力，用以限制发送方的发送速度。
+
+　　TCP（Transmission Control Protocol，传输控制协议）是一种面向连接的、可靠的、基于字节流的通信协议，数据在传输前要建立连接，传输完毕后还要断开连接，客户端在收发数据前要使用 connect() 函数和服务器建立连接。建立连接的目的是保证 IP 地址、端口、物理链路等正确无误，为数据的传输开辟通道。
 
 　　TCP 是面向连接的协议，即在收发数据线，都需要与对面建立可靠的连接。
 
@@ -362,6 +393,8 @@
 　　UDP 用户数据报协议，是面向无连接的通讯协议，UDP 数据包括目的端口号和源端口号信息，由于通讯不需要连接，所以可以实现广播发送。
 
 　　UDP 通讯时不需要接收方确认，属于不可靠的传输，可能会出现丢包现象，实际应用中要求程序员编码验证。
+
+　　UDP （User Datagram Protocol）用户数据包协议，非连接的协议，传输数据之前源端和终端不建立连接，当它想传送时就简单地去抓取来自应用程序地数据，并尽可能快地把它扔到网络上。在发送端，UDP 传送数据地速度仅仅是受应用程序生成数据的速度、计算机的能力和传输带宽的限制；在接收端，UDP 把每个消息段放在队列中，应用程序每次从队列中读一个消息段。相比 TCP 就是无需建立连接，结构简单，无法保证正确性，容易丢包。
 
 　　UDP 和 TCP 位于同一层，但它不管数据包的顺序、错误或重发。因此，UDP 不被应用于那些使用虚电路的面向连接的服务，UDP 主要用于那些面向查询-应答的服务，例如 NFS。相对于 FTP 或 Telent。这些服务需要交换的信息量较小。
 
@@ -451,6 +484,35 @@
 2. 在客户端的传输层，将 HTTP 会话请求分成报文段，添加源和目的端口，如服务器使用 80 端口监听客户端的请求，客户端由系统随机算则一个端口如 5000，与服务器进行交换，服务器把相应的请求返回给客户端的 5000 端口，然后使用 IP 层的 IP 地址查找目的端。
 3. 客户端的网络层不用关系应用层或者传输层的东西，主要做的是通过查找路由表确定如何达到服务器，期间可能经过多个路由器，这些都是由路由器来完成的工作，不作过多的描述，无非就是通过查找路由表决定通过哪个路径达到服务器。
 4. 客户端的链路层，包通过链路层发送到路由器，通过邻居协议查找给定 IP 地址的 MAC 地址，然后发送 ARP 请求查找目的地址，如果得到回应后就可以使用 ARP 的请求应答交换的 IP 数据包现在就可以传输了，然后发送 IP 数据到到达服务器的地址。
+
+
+
+## Java 中对于网络提供的几个关键类
+
+　　针对不同的网络通信层次，Java 提供的网络功能有四大类：
+
+* InetAddress：用于标识网络上的硬件资源
+* URL：统一资源定位符，通过 URL 可以直接读取或者写入网络上的数据
+* Socket 和 ServerSocket：使用 TCP 协议实现网络通信的 Socket 相关的类
+* Datagram：使用 UDP 协议，将数据保存在数据报中，通过网络进行通信
+
+### InetAddress 的使用例子
+
+　　示例代码：
+
+```java
+public class InetAddressTest {
+    public static void main(String[] args) throws Exception{
+        //获取本机InetAddress的实例：
+        InetAddress address = InetAddress.getLocalHost();
+        System.out.println("本机名：" + address.getHostName());
+        System.out.println("IP地址：" + address.getHostAddress());
+        byte[] bytes = address.getAddress();
+        System.out.println("字节数组形式的IP地址：" + Arrays.toString(bytes));
+        System.out.println("直接输出InetAddress对象：" + address);
+    }
+}
+```
 
 ## 参考文章
 1. [计算机网络基础知识总结](https://www.runoob.com/w3cnote/summary-of-network.html)
