--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -327,6 +327,16 @@
 
 　　TCP/IP 协议是 Internet 最基本的协议、Internet 国际互联网络的基础，由网络层的 IP 协议和传输层的 TCP 协议组成。通俗而言：TCP 负责发现传输的问题，一有问题就发出信号，要求重新传输，直到所有数据安全正确地传输到目的地。而 IP 是给因特网地每一台联网设备规定一个地址。
 
+　　TCP/IP (Transmission Control Protocol/Internet Protocol) 即传输控制协议/网间协议，是一个工业标准的协议集，它是为广域网（WANs）设计的。
+
+　　UDP （User Data Protocol，用户数据报协议）是与 TCP 相对应的协议。它是属于 TCP/IP 协议族的一种。
+
+　　下图表明了这些协议的关系：
+
+![](image/协议关系.jpg)
+
+　　TCP/IP 协议族包括运输层、网络层、链路层。
+
 　　IP 层接收由更底层（网络接口层，例如以太网设备驱动程序）发来地数据包，并把该数据包发送到更高层 -TCP 或 UDP 层；相反，IP 层也把从 TCP 或 UDP 层接收来的数据包传送到更底层。IP 数据包是不可靠的，因为 IP 并没有做任何事情来确认数据包是否按顺序发送的或者有没有被破坏，IP 数据包中含有发送它的主机的地址（源地址）和接收他的主机的地址（目的地址）。
 
 　　TCP/IP 【TCP（传输控制协议）和 IP（网际协议）】提供点对点的连接机制，将数据应该如何封装、定址、传输、路由以及在目的地如何接收，都加以标准化。它将软件通信过程抽象化为四个抽象层，采取协议堆栈的方式，分别实现出不同通信协议。协议族下的各种协议，依其功能不同，被分别归属到这四个层次结构之中，常被视为是简化的七层 OSI 模型。
